update restart command

--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/cs.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/cs.json
@@ -68,10 +68,10 @@
     "LabelMovie": "Film",
     "LabelMusicVideo": "Hudebn\u00ed video",
     "LabelEpisode": "Epizoda",
-    "LabelSeries": "Series",
+    "LabelSeries": "S\u00e9rie",
     "LabelStopping": "Stopping",
     "LabelCancelled": "(zru\u0161eno)",
-    "LabelFailed": "(failed)",
+    "LabelFailed": "(ne\u00fasp\u011b\u0161n\u00e9)",
     "ButtonHelp": "Help",
     "ButtonSave": "Ulo\u017eit",
     "ButtonDownload": "St\u00e1hnout",
@@ -85,10 +85,10 @@
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
-    "HeaderAddToCollection": "Add to Collection",
+    "HeaderAddToCollection": "P\u0159idat do kolekce",
     "NewCollectionNameExample": "P\u0159\u00edklad: Kolekce Star Wars",
     "OptionSearchForInternetMetadata": "Prohledat internet pro nalezen\u00ed metadat a obalu.",
-    "LabelSelectCollection": "Select collection:",
+    "LabelSelectCollection": "Vybrat kolekce:",
     "HeaderDevices": "Devices",
     "ButtonScheduledTasks": "Scheduled tasks",
     "MessageItemsAdded": "Items added",
@@ -139,12 +139,12 @@
     "ButtonMute": "Mute",
     "ButtonUnmute": "Unmute",
     "ButtonStop": "Stop",
-    "ButtonNextTrack": "Next Track",
+    "ButtonNextTrack": "Dal\u0161\u00ed stopa",
     "ButtonPause": "Pause",
     "ButtonPlay": "P\u0159ehr\u00e1t",
     "ButtonEdit": "Upravit",
     "ButtonQueue": "Queue",
-    "ButtonPlayTrailer": "Play trailer",
+    "ButtonPlayTrailer": "P\u0159ehr\u00e1t uk\u00e1zku\/trailer",
     "ButtonPlaylist": "Playlist",
     "ButtonPreviousTrack": "P\u0159edchod\u00ed stopa",
     "LabelEnabled": "Enabled",
@@ -404,8 +404,8 @@
     "TabAdvanced": "Pokro\u010dil\u00e9",
     "TabHelp": "Help",
     "TabScheduledTasks": "Scheduled Tasks",
-    "ButtonFullscreen": "Fullscreen",
-    "ButtonAudioTracks": "Audio Tracks",
+    "ButtonFullscreen": "Cel\u00e1 obrazovka",
+    "ButtonAudioTracks": "Audio stopy",
     "ButtonSubtitles": "Titulky",
     "ButtonScenes": "Sc\u00e9ny",
     "ButtonQuality": "Quality",
@@ -428,7 +428,7 @@
     "ButtonRemoveFromPlaylist": "Remove from playlist",
     "HeaderSpecials": "Specials",
     "HeaderTrailers": "Trailers",
-    "HeaderAudio": "Audio",
+    "HeaderAudio": "Zvuk",
     "HeaderResolution": "Resolution",
     "HeaderVideo": "Video",
     "HeaderRuntime": "Runtime",
@@ -478,7 +478,7 @@
     "PersonTypePerson": "Person",
     "LabelTitleDisplayOrder": "Title display order:",
     "OptionSortName": "Sort name",
-    "OptionReleaseDate": "Release date",
+    "OptionReleaseDate": "Datum premi\u00e9ry.",
     "LabelSeasonNumber": "Season number:",
     "LabelDiscNumber": "Disc number",
     "LabelParentNumber": "Parent number",
@@ -622,7 +622,7 @@
     "HeaderAlbums": "Albums",
     "HeaderGames": "Games",
     "HeaderBooks": "Books",
-    "HeaderEpisodes": "Episodes",
+    "HeaderEpisodes": "Epizody",
     "HeaderSeasons": "Seasons",
     "HeaderTracks": "Tracks",
     "HeaderItems": "Items",
@@ -713,7 +713,7 @@
     "MessageInvitationSentToNewUser": "An email has been sent to {0} inviting them to sign up with Emby.",
     "HeaderConnectionFailure": "Connection Failure",
     "MessageUnableToConnectToServer": "We're unable to connect to the selected server right now. Please ensure it is running and try again.",
-    "ButtonSelectServer": "Select server",
+    "ButtonSelectServer": "Select Server",
     "MessagePluginConfigurationRequiresLocalAccess": "To configure this plugin please sign in to your local server directly.",
     "MessageLoggedOutParentalControl": "Access is currently restricted. Please try again later.",
     "DefaultErrorMessage": "There was an error processing the request. Please try again later.",
@@ -741,7 +741,7 @@
     "LabelQuality": "Quality:",
     "HeaderSettings": "Settings",
     "OptionAutomaticallySyncNewContent": "Automatically sync new content",
-    "OptionAutomaticallySyncNewContentHelp": "New content added to this category will be automatically synced to the device.",
+    "OptionAutomaticallySyncNewContentHelp": "New content added to will be automatically synced to the device.",
     "OptionSyncUnwatchedVideosOnly": "Sync unwatched videos only",
     "OptionSyncUnwatchedVideosOnlyHelp": "Only unwatched videos will be synced, and videos will be removed from the device as they are watched.",
     "LabelItemLimit": "Item limit:",
@@ -766,5 +766,22 @@
     "ButtonRemote": "Remote",
     "TabInfo": "Info",
     "TabCast": "Cast",
-    "TabScenes": "Scenes"
+    "TabScenes": "Scenes",
+    "HeaderUnlockApp": "Unlock App",
+    "MessageUnlockAppWithPurchase": "Unlock the full features of the app with a small one-time purchase.",
+    "MessageUnlockAppWithPurchaseOrSupporter": "Unlock the full features of the app with a small one-time purchase, or by signing in with an active Emby Supporter Membership.",
+    "MessageUnlockAppWithSupporter": "Unlock the full features of the app by signing in with an active Emby Supporter Membership.",
+    "MessageToValidateSupporter": "If you have an active Emby Supporter Membership, simply sign into the app using your Wifi connection within your home network.",
+    "MessagePaymentServicesUnavailable": "Payment services are currently unavailable. Please try again later.",
+    "ButtonUnlockWithSupporter": "Sign in with Emby Supporter Membership",
+    "MessagePleaseSignInLocalNetwork": "Before proceeding, please ensure that you're connected to your local network using a Wifi or LAN connection.",
+    "ButtonUnlockWithPurchase": "Unlock with Purchase",
+    "MessageLiveTvGuideRequiresUnlock": "The Live TV Guide is currently limited to {0} channels. Click the unlock button to learn how to enjoy the full experience.",
+    "OptionEnableFullscreen": "Enable Fullscreen",
+    "ButtonServer": "Server",
+    "HeaderAdmin": "Admin",
+    "HeaderLibrary": "Library",
+    "HeaderMedia": "Media",
+    "ButtonInbox": "Inbox",
+    "HeaderAdvanced": "Advanced"
 }
