--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es-AR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es-AR.json
@@ -1,42 +1,42 @@
 {
-    "SettingsSaved": "Ustawienia zapisane.",
-    "AddUser": "Dodaj u\u017cytkownika",
-    "Users": "U\u017cytkownicy",
-    "Delete": "Usu\u0144",
+    "SettingsSaved": "Settings saved.",
+    "AddUser": "Add User",
+    "Users": "Users",
+    "Delete": "Delete",
     "Administrator": "Administrator",
-    "Password": "Has\u0142o",
-    "DeleteImage": "Usu\u0144 zdj\u0119cie",
+    "Password": "Password",
+    "DeleteImage": "Delete Image",
     "MessageThankYouForSupporting": "Thank you for supporting Emby.",
     "MessagePleaseSupportProject": "Please support Emby.",
-    "DeleteImageConfirmation": "Jeste\u015b pewien \u017ce chcesz usun\u0105\u0107 to zdj\u0119cie?",
-    "FileReadCancelled": "Odczytywanie pliku zosta\u0142o anulowane.",
-    "FileNotFound": "Plik nie znaleziony.",
-    "FileReadError": "Wyst\u0105pi\u0142 b\u0142\u0105d podczas odczytywania pliku.",
-    "DeleteUser": "Usu\u0144 u\u017cytkownika",
-    "DeleteUserConfirmation": "Czy na pewno chcesz skasowa\u0107 tego u\u017cytkownika?",
+    "DeleteImageConfirmation": "Are you sure you wish to delete this image?",
+    "FileReadCancelled": "The file read has been canceled.",
+    "FileNotFound": "File not found.",
+    "FileReadError": "An error occurred while reading the file.",
+    "DeleteUser": "Delete User",
+    "DeleteUserConfirmation": "Are you sure you wish to delete this user?",
     "PasswordResetHeader": "Reset Password",
-    "PasswordResetComplete": "Has\u0142o zosta\u0142o zresetowane.",
+    "PasswordResetComplete": "The password has been reset.",
     "PinCodeResetComplete": "The pin code has been reset.",
-    "PasswordResetConfirmation": "Jeste\u015b pewien \u017ce chcesz zresetowa\u0107 has\u0142o?",
+    "PasswordResetConfirmation": "Are you sure you wish to reset the password?",
     "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
     "HeaderPinCodeReset": "Reset Pin Code",
-    "PasswordSaved": "Has\u0142o zapisane.",
-    "PasswordMatchError": "Has\u0142o i potwierdzenie has\u0142a musz\u0105 si\u0119 zgadza\u0107.",
-    "OptionRelease": "Oficjalne wydanie",
+    "PasswordSaved": "Password saved.",
+    "PasswordMatchError": "Password and password confirmation must match.",
+    "OptionRelease": "Official Release",
     "OptionBeta": "Beta",
-    "OptionDev": "Dev (Niestabilne)",
-    "UninstallPluginHeader": "Usu\u0144 wtyczk\u0119",
-    "UninstallPluginConfirmation": "Czy na pewno chcesz usun\u0105\u0107 {0}?",
-    "NoPluginConfigurationMessage": "Ta wtyczka nie ma \u017cadnych ustawie\u0144.",
-    "NoPluginsInstalledMessage": "Nie masz \u017cadnych wtyczek zainstalowanych.",
-    "BrowsePluginCatalogMessage": "Przejrzyj nasz katalog wtyczek \u017ceby zobaczy\u0107 dost\u0119pne wtyczki.",
+    "OptionDev": "Dev (Unstable)",
+    "UninstallPluginHeader": "Uninstall Plugin",
+    "UninstallPluginConfirmation": "Are you sure you wish to uninstall {0}?",
+    "NoPluginConfigurationMessage": "This plugin has nothing to configure.",
+    "NoPluginsInstalledMessage": "You have no plugins installed.",
+    "BrowsePluginCatalogMessage": "Browse our plugin catalog to view available plugins.",
     "MessageKeyEmailedTo": "Key emailed to {0}.",
     "MessageKeysLinked": "Keys linked.",
     "HeaderConfirmation": "Confirmation",
     "MessageKeyUpdated": "Thank you. Your supporter key has been updated.",
     "MessageKeyRemoved": "Thank you. Your supporter key has been removed.",
     "HeaderSupportTheTeam": "Support the Emby Team",
-    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
+    "TextEnjoyBonusFeatures": "Disfrute los extras",
     "TitleLiveTV": "Live TV",
     "TitleSync": "Sync",
     "ButtonDonate": "Donate",
@@ -51,7 +51,7 @@
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
     "ValueTimeLimitSingleHour": "Time limit: 1 hour",
     "ValueTimeLimitMultiHour": "Time limit: {0} hours",
-    "HeaderUsers": "U\u017cytkownicy",
+    "HeaderUsers": "Users",
     "PluginCategoryGeneral": "General",
     "PluginCategoryContentProvider": "Content Providers",
     "PluginCategoryScreenSaver": "Screen Savers",
@@ -71,9 +71,9 @@
     "LabelSeries": "Series",
     "LabelStopping": "Stopping",
     "LabelCancelled": "(cancelled)",
-    "LabelFailed": "(failed)",
+    "LabelFailed": "(fallido)",
     "ButtonHelp": "Help",
-    "ButtonSave": "Zapisz",
+    "ButtonSave": "Save",
     "ButtonDownload": "Download",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
@@ -85,10 +85,10 @@
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
-    "HeaderAddToCollection": "Add to Collection",
-    "NewCollectionNameExample": "Example: Star Wars Collection",
+    "HeaderAddToCollection": "Agregar a la colecci\u00f3n",
+    "NewCollectionNameExample": "Ejemplo: Colecci\u00f3n de Star Wars",
     "OptionSearchForInternetMetadata": "Search the internet for artwork and metadata",
-    "LabelSelectCollection": "Select collection:",
+    "LabelSelectCollection": "Seleccionar colecci\u00f3n:",
     "HeaderDevices": "Devices",
     "ButtonScheduledTasks": "Scheduled tasks",
     "MessageItemsAdded": "Items added",
@@ -139,14 +139,14 @@
     "ButtonMute": "Mute",
     "ButtonUnmute": "Unmute",
     "ButtonStop": "Stop",
-    "ButtonNextTrack": "Next Track",
+    "ButtonNextTrack": "Tema Siguiente",
     "ButtonPause": "Pause",
     "ButtonPlay": "Play",
     "ButtonEdit": "Edit",
     "ButtonQueue": "Queue",
-    "ButtonPlayTrailer": "Play trailer",
+    "ButtonPlayTrailer": "Ver trailer",
     "ButtonPlaylist": "Playlist",
-    "ButtonPreviousTrack": "Previous Track",
+    "ButtonPreviousTrack": "Tema Anterior",
     "LabelEnabled": "Enabled",
     "LabelDisabled": "Disabled",
     "ButtonMoreInformation": "More Information",
@@ -173,13 +173,13 @@
     "MessageRecordingDeleted": "Recording deleted.",
     "ButonCancelRecording": "Cancel Recording",
     "MessageRecordingSaved": "Recording saved.",
-    "OptionSunday": "Niedziela",
-    "OptionMonday": "Poniedzia\u0142ek",
-    "OptionTuesday": "Wtorek",
-    "OptionWednesday": "\u015aroda",
-    "OptionThursday": "Czwartek",
-    "OptionFriday": "Pi\u0105tek",
-    "OptionSaturday": "Sobota",
+    "OptionSunday": "Sunday",
+    "OptionMonday": "Monday",
+    "OptionTuesday": "Tuesday",
+    "OptionWednesday": "Wednesday",
+    "OptionThursday": "Thursday",
+    "OptionFriday": "Friday",
+    "OptionSaturday": "Saturday",
     "OptionEveryday": "Every day",
     "OptionWeekend": "Weekends",
     "OptionWeekday": "Weekdays",
@@ -205,7 +205,7 @@
     "MessagePleaseSelectTwoItems": "Please select at least two items.",
     "MessageTheFollowingItemsWillBeGrouped": "The following titles will be grouped into one item:",
     "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
-    "HeaderResume": "Wzn\u00f3w",
+    "HeaderResume": "Resume",
     "HeaderMyViews": "My Views",
     "HeaderLibraryFolders": "Media Folders",
     "HeaderLatestMedia": "Latest Media",
@@ -277,7 +277,7 @@
     "ButtonRemoteControl": "Remote Control",
     "HeaderLatestTvRecordings": "Latest Recordings",
     "ButtonOk": "Ok",
-    "ButtonCancel": "Anuluj",
+    "ButtonCancel": "Cancel",
     "ButtonRefresh": "Refresh",
     "LabelCurrentPath": "Current path:",
     "HeaderSelectMediaPath": "Select Media Path",
@@ -325,16 +325,16 @@
     "MessageConfirmRevokeApiKey": "Are you sure you wish to revoke this api key? The application's connection to Emby Server will be abruptly terminated.",
     "HeaderConfirmRevokeApiKey": "Revoke Api Key",
     "ValueContainer": "Container: {0}",
-    "ValueAudioCodec": "Audio Codec: {0}",
-    "ValueVideoCodec": "Video Codec: {0}",
-    "ValueCodec": "Codec: {0}",
-    "ValueConditions": "Conditions: {0}",
-    "LabelAll": "All",
-    "HeaderDeleteImage": "Delete Image",
+    "ValueAudioCodec": "C\u00f3dec de audio: {0}",
+    "ValueVideoCodec": "C\u00f3dec de video: {0}",
+    "ValueCodec": "C\u00f3dec: {0}",
+    "ValueConditions": "Condiciones: {0}",
+    "LabelAll": "Todo",
+    "HeaderDeleteImage": "Borrar imagen",
     "MessageFileNotFound": "File not found.",
     "MessageFileReadError": "An error occurred reading this file.",
-    "ButtonNextPage": "Next Page",
-    "ButtonPreviousPage": "Previous Page",
+    "ButtonNextPage": "P\u00e1gina siguiente",
+    "ButtonPreviousPage": "P\u00e1gina anterior",
     "ButtonMoveLeft": "Move left",
     "ButtonMoveRight": "Move right",
     "ButtonBrowseOnlineImages": "Browse online images",
@@ -344,7 +344,7 @@
     "MessageValueNotCorrect": "The value entered is not correct. Please try again.",
     "MessageItemSaved": "Item saved.",
     "MessagePleaseAcceptTermsOfServiceBeforeContinuing": "Please accept the terms of service before continuing.",
-    "OptionEnded": "Zako\u0144czony",
+    "OptionEnded": "Ended",
     "OptionContinuing": "Continuing",
     "OptionOff": "Off",
     "OptionOn": "On",
@@ -352,30 +352,30 @@
     "ButtonUninstall": "Uninstall",
     "HeaderFields": "Fields",
     "HeaderFieldsHelp": "Slide a field to 'off' to lock it and prevent it's data from being changed.",
-    "HeaderLiveTV": "Live TV",
+    "HeaderLiveTV": "TV en vivo",
     "MissingLocalTrailer": "Missing local trailer.",
     "MissingPrimaryImage": "Missing primary image.",
     "MissingBackdropImage": "Missing backdrop image.",
     "MissingLogoImage": "Missing logo image.",
-    "MissingEpisode": "Missing episode.",
+    "MissingEpisode": "Falta cap\u00edtulo.",
     "OptionScreenshots": "Screenshots",
     "OptionBackdrops": "Backdrops",
-    "OptionImages": "Images",
-    "OptionKeywords": "Keywords",
-    "OptionTags": "Tags",
-    "OptionStudios": "Studios",
-    "OptionName": "Name",
+    "OptionImages": "Im\u00e1genes",
+    "OptionKeywords": "Palabras clave",
+    "OptionTags": "Etiquetas",
+    "OptionStudios": "Estudios",
+    "OptionName": "Nombre",
     "OptionOverview": "Overview",
     "OptionGenres": "Genres",
-    "OptionParentalRating": "Ocena rodzicielska",
+    "OptionParentalRating": "Parental Rating",
     "OptionPeople": "People",
-    "OptionRuntime": "D\u0142ugo\u015b\u0107 filmu",
+    "OptionRuntime": "Runtime",
     "OptionProductionLocations": "Production Locations",
-    "OptionBirthLocation": "Birth Location",
-    "LabelAllChannels": "All channels",
-    "LabelLiveProgram": "LIVE",
-    "LabelNewProgram": "NEW",
-    "LabelPremiereProgram": "PREMIERE",
+    "OptionBirthLocation": "Lugar de nacimiento",
+    "LabelAllChannels": "Todos los canales",
+    "LabelLiveProgram": "EN VIVO",
+    "LabelNewProgram": "NUEVO",
+    "LabelPremiereProgram": "ESTRENO",
     "LabelHDProgram": "HD",
     "HeaderChangeFolderType": "Change Content Type",
     "HeaderChangeFolderTypeHelp": "To change the type, please remove and rebuild the folder with the new type.",
@@ -393,7 +393,7 @@
     "LabelPackageInstallCompleted": "{0} installation completed.",
     "LabelPackageInstallFailed": "{0} installation failed.",
     "LabelPackageInstallCancelled": "{0} installation cancelled.",
-    "TabServer": "Serwer",
+    "TabServer": "Server",
     "TabUsers": "Users",
     "TabLibrary": "Library",
     "TabMetadata": "Metadata",
@@ -401,11 +401,11 @@
     "TabLiveTV": "Live TV",
     "TabAutoOrganize": "Auto-Organize",
     "TabPlugins": "Plugins",
-    "TabAdvanced": "Zaawansowane",
+    "TabAdvanced": "Advanced",
     "TabHelp": "Help",
     "TabScheduledTasks": "Scheduled Tasks",
-    "ButtonFullscreen": "Fullscreen",
-    "ButtonAudioTracks": "Audio Tracks",
+    "ButtonFullscreen": "Pantalla Completa",
+    "ButtonAudioTracks": "Pistas de Audio",
     "ButtonSubtitles": "Subtitles",
     "ButtonScenes": "Scenes",
     "ButtonQuality": "Quality",
@@ -417,7 +417,7 @@
     "HeaderVideoError": "Video Error",
     "ButtonAddToPlaylist": "Add to playlist",
     "HeaderAddToPlaylist": "Add to Playlist",
-    "LabelName": "Imi\u0119:",
+    "LabelName": "Name:",
     "ButtonSubmit": "Submit",
     "LabelSelectPlaylist": "Playlist:",
     "OptionNewPlaylist": "New playlist...",
@@ -447,11 +447,11 @@
     "HeaderEmbeddedImage": "Embedded image",
     "HeaderTrack": "Track",
     "HeaderDisc": "Disc",
-    "OptionMovies": "Filmy",
+    "OptionMovies": "Movies",
     "OptionCollections": "Collections",
     "OptionSeries": "Series",
     "OptionSeasons": "Seasons",
-    "OptionEpisodes": "Odcinki",
+    "OptionEpisodes": "Episodes",
     "OptionGames": "Games",
     "OptionGameSystems": "Game systems",
     "OptionMusicArtists": "Music artists",
@@ -478,7 +478,7 @@
     "PersonTypePerson": "Person",
     "LabelTitleDisplayOrder": "Title display order:",
     "OptionSortName": "Sort name",
-    "OptionReleaseDate": "Data wydania",
+    "OptionReleaseDate": "Fecha de estreno",
     "LabelSeasonNumber": "Season number:",
     "LabelDiscNumber": "Disc number",
     "LabelParentNumber": "Parent number",
@@ -516,14 +516,14 @@
     "FolderTypeGames": "Games",
     "FolderTypeBooks": "Books",
     "FolderTypeTvShows": "TV",
-    "TabMovies": "Filmy",
+    "TabMovies": "Movies",
     "TabSeries": "Series",
-    "TabEpisodes": "Odcinki",
-    "TabTrailers": "Zwiastuny",
-    "TabGames": "Gry",
-    "TabAlbums": "Albumy",
-    "TabSongs": "Utwory",
-    "TabMusicVideos": "Teledyski",
+    "TabEpisodes": "Cap\u00edtulos",
+    "TabTrailers": "Trailers",
+    "TabGames": "Games",
+    "TabAlbums": "Albums",
+    "TabSongs": "Songs",
+    "TabMusicVideos": "Music Videos",
     "BirthPlaceValue": "Birth place: {0}",
     "DeathDateValue": "Died: {0}",
     "BirthDateValue": "Born: {0}",
@@ -622,7 +622,7 @@
     "HeaderAlbums": "Albums",
     "HeaderGames": "Games",
     "HeaderBooks": "Books",
-    "HeaderEpisodes": "Episodes",
+    "HeaderEpisodes": "Cap\u00edtulos",
     "HeaderSeasons": "Seasons",
     "HeaderTracks": "Tracks",
     "HeaderItems": "Items",
