--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es-MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es-MX.json
@@ -144,7 +144,7 @@
     "ButtonPlay": "Reproducir",
     "ButtonEdit": "Editar",
     "ButtonQueue": "A cola",
-    "ButtonPlayTrailer": "Reproducir trailer",
+    "ButtonPlayTrailer": "Reproducir tr\u00e1iler",
     "ButtonPlaylist": "Lista de Reprod.",
     "ButtonPreviousTrack": "Pista Anterior",
     "LabelEnabled": "Habilitado",
@@ -313,7 +313,7 @@
     "HeaderBlockItemsWithNoRating": "Bloquear contenido sin informaci\u00f3n de clasificaci\u00f3n:",
     "OptionBlockOthers": "Otros",
     "OptionBlockTvShows": "Programas de TV",
-    "OptionBlockTrailers": "Avances",
+    "OptionBlockTrailers": "Tr\u00e1ilers",
     "OptionBlockMusic": "M\u00fasica",
     "OptionBlockMovies": "Pel\u00edculas",
     "OptionBlockBooks": "Libros",
@@ -353,7 +353,7 @@
     "HeaderFields": "Campos",
     "HeaderFieldsHelp": "Deslice un campo hacia \"apagado\" para bloquearlo y evitar que sus datos sean modificados.",
     "HeaderLiveTV": "TV en Vivo",
-    "MissingLocalTrailer": "Falta avance local.",
+    "MissingLocalTrailer": "Falta tr\u00e1iler local.",
     "MissingPrimaryImage": "Falta im\u00e1gen principal.",
     "MissingBackdropImage": "Falta im\u00e1gen de fondo.",
     "MissingLogoImage": "Falta im\u00e1gen de logo.",
@@ -427,7 +427,7 @@
     "ValueOriginalAirDate": "Fecha de transmisi\u00f3n original: {0}",
     "ButtonRemoveFromPlaylist": "Eliminar de la lista de reproducci\u00f3n",
     "HeaderSpecials": "Especiales",
-    "HeaderTrailers": "Avances",
+    "HeaderTrailers": "Tr\u00e1ilers",
     "HeaderAudio": "Audio",
     "HeaderResolution": "Resoluci\u00f3n",
     "HeaderVideo": "Video",
@@ -519,7 +519,7 @@
     "TabMovies": "Pel\u00edculas",
     "TabSeries": "Series",
     "TabEpisodes": "Episodios",
-    "TabTrailers": "Avances",
+    "TabTrailers": "Tr\u00e1ilers",
     "TabGames": "Juegos",
     "TabAlbums": "\u00c1lbumes",
     "TabSongs": "Canciones",
@@ -565,8 +565,8 @@
     "LabelResumePoint": "Punto de reinicio:",
     "ValueOneMovie": "1 pel\u00edcula",
     "ValueMovieCount": "{0} pel\u00edculas",
-    "ValueOneTrailer": "1 avance",
-    "ValueTrailerCount": "{0} avances",
+    "ValueOneTrailer": "1 tr\u00e1iler",
+    "ValueTrailerCount": "{0} tr\u00e1ilers",
     "ValueOneSeries": "1 serie",
     "ValueSeriesCount": "{0} series",
     "ValueOneEpisode": "1 episodio",
@@ -671,7 +671,7 @@
     "LabelShortRatingDescription": "Res\u00famen corto de calificaci\u00f3n:",
     "OptionIRecommendThisItem": "Yo recomiendo este \u00edtem",
     "WebClientTourContent": "Vea sus medios recientemente a\u00f1adidos, siguientes ep\u00ecsodios y m\u00e1s. Los c\u00edrculos verdes indican cuantos medios sin reproducir tiene.",
-    "WebClientTourMovies": "Reproduzca pel\u00edculas, avances y m\u00e1s desde cualquier dispositivo con un navegador web.",
+    "WebClientTourMovies": "Reproduzca pel\u00edculas, tr\u00e1ilers y m\u00e1s desde cualquier dispositivo con un navegador web.",
     "WebClientTourMouseOver": "Mantenga el rat\u00f3n sobre cualquier p\u00f3ster para un acceso r\u00e1pido a informaci\u00f3n importante.",
     "WebClientTourTapHold": "Mantenga presionado o haga clic derecho en cualquier p\u00f3ster para mostrar un men\u00fa contextual",
     "WebClientTourMetadataManager": "Haga clic en editar para abrir el administrador de metadatos",
@@ -688,7 +688,7 @@
     "DashboardTourDashboard": "El panel de control del servidor le permite monitorear su servidor y sus usuarios. Siempre sabr\u00e1 quien est\u00e1 haciendo qu\u00e9 y donde se encuentran.",
     "DashboardTourHelp": "La ayuda dentro de la app proporciona botones simples para abrir p\u00e1ginas de la wiki relacionadas con el contenido en pantalla.",
     "DashboardTourUsers": "Cree cuentas f\u00e1cilmente para sus amigos y familia, cada una con sus propios permisos, accesos a la biblioteca, controles parentales y m\u00e1s.",
-    "DashboardTourCinemaMode": "El modo cine trae la experiencia del cine directo a su sala de TV con la capacidad de reproducir avances e intros personalizados antes de la presentaci\u00f3n estelar.",
+    "DashboardTourCinemaMode": "El modo cine trae la experiencia del cine directo a su sala de TV con la capacidad de reproducir tr\u00e1ilers e intros personalizados antes de la presentaci\u00f3n estelar.",
     "DashboardTourChapters": "Active la generaci\u00f3n de im\u00e1genes de cap\u00edtulos de sus videos para una presentaci\u00f3n m\u00e1s agradable al desplegar.",
     "DashboardTourSubtitles": "Descargue autom\u00e1ticamente subt\u00edtulos para sus videos en cualquier idioma.",
     "DashboardTourPlugins": "Instale complementos como canales de video de Internet, TV en vivo, buscadores de metadatos y m\u00e1s.",
@@ -713,7 +713,7 @@
     "MessageInvitationSentToNewUser": "Un correo electr\u00f3nico se ha enviado a {0} invit\u00e1ndolos a registrarse en Emby.",
     "HeaderConnectionFailure": "Falla de Conexi\u00f3n",
     "MessageUnableToConnectToServer": "No es posible conectarse al servidor seleccionado en este momento. Por favor aseg\u00farese de que se encuentra en ejecuci\u00f3n e int\u00e9ntelo nuevamente.",
-    "ButtonSelectServer": "Seleccionar servidor",
+    "ButtonSelectServer": "Seleccionar Servidor",
     "MessagePluginConfigurationRequiresLocalAccess": "Para configurar este complemento por favor inicie sesi\u00f3n en su servidor local directamente.",
     "MessageLoggedOutParentalControl": "El acceso se encuentra restringido en este momento. Por favor int\u00e9ntelo de nuevo mas tarde.",
     "DefaultErrorMessage": "Ha ocurrido un error al procesar la solicitud. Por favor int\u00e9ntelo de nuevo mas tarde.",
@@ -741,7 +741,7 @@
     "LabelQuality": "Calidad:",
     "HeaderSettings": "Configuraci\u00f3n",
     "OptionAutomaticallySyncNewContent": "Sincronizar autom\u00e1ticamente nuevos contenidos",
-    "OptionAutomaticallySyncNewContentHelp": "Los contenidos nuevos agregados a esta categor\u00eda ser\u00e1n sincronizados autom\u00e1ticamente con el dispositivo.",
+    "OptionAutomaticallySyncNewContentHelp": "Los contenidos nuevos agregados ser\u00e1n sincronizados autom\u00e1ticamente con el dispositivo.",
     "OptionSyncUnwatchedVideosOnly": "Sincronizar \u00fanicamente videos no vistos",
     "OptionSyncUnwatchedVideosOnlyHelp": "Solamente los videos a\u00fan no vistos ser\u00e1n sincronizados, se eliminar\u00e1n los videos del dispositivo conforme \u00e9stos sean vistos.",
     "LabelItemLimit": "L\u00edmite de \u00cdtems:",
@@ -766,5 +766,22 @@
     "ButtonRemote": "Remoto",
     "TabInfo": "Info",
     "TabCast": "Reparto",
-    "TabScenes": "Escenas"
+    "TabScenes": "Escenas",
+    "HeaderUnlockApp": "Desbloquear App",
+    "MessageUnlockAppWithPurchase": "Desbloquear todas las caracter\u00edsticas de la app con una peque\u00f1a compra \u00fanica.",
+    "MessageUnlockAppWithPurchaseOrSupporter": "Desbloquear todas las caracter\u00edsticas de la app con un peque\u00f1a compra \u00fanica, o iniciando sesi\u00f3n con una cuenta activa de Miembro Aficionado Emby.",
+    "MessageUnlockAppWithSupporter": "Desbloquear todas las caracter\u00edsticas de la app iniciando sesi\u00f3n con una cuenta activa de Miembro Aficionado Emby.",
+    "MessageToValidateSupporter": "Si tiene una cuenta activa de Miembro Aficionado Emby, solo inicie sesi\u00f3n en la app usando la conexi\u00f3n Wifi dentro de su red de hogar.",
+    "MessagePaymentServicesUnavailable": "Los servicios de pago no se encuentran disponibles actualmente. Por favor intente de nuevo mas tarde.",
+    "ButtonUnlockWithSupporter": "Iniciar sesi\u00f3n con una Membres\u00eda de Aficionado Emby",
+    "MessagePleaseSignInLocalNetwork": "Antes de continuar, por favor aseg\u00farese de que esta conectado a su red local usando una conexi\u00f3n Wifi o LAN.",
+    "ButtonUnlockWithPurchase": "Desbloquear con una compra",
+    "MessageLiveTvGuideRequiresUnlock": "La Guia de TV en Vivo actualmente esta limitada a {0} canales. De clic en el bot\u00f3n Desbloquear para saber como desbloquear la experiencia completa.",
+    "OptionEnableFullscreen": "Habilitar Pantalla Completa",
+    "ButtonServer": "Servidor",
+    "HeaderAdmin": "Admin",
+    "HeaderLibrary": "Biblioteca",
+    "HeaderMedia": "Medios",
+    "ButtonInbox": "Inbox",
+    "HeaderAdvanced": "Avanzado"
 }
