--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/gsw.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/gsw.json
@@ -1,48 +1,48 @@
 {
-    "SettingsSaved": "Ustawienia zapisane.",
-    "AddUser": "Dodaj u\u017cytkownika",
-    "Users": "U\u017cytkownicy",
-    "Delete": "Usu\u0144",
+    "SettingsSaved": "Settings saved.",
+    "AddUser": "Add User",
+    "Users": "Users",
+    "Delete": "Delete",
     "Administrator": "Administrator",
-    "Password": "Has\u0142o",
-    "DeleteImage": "Usu\u0144 zdj\u0119cie",
+    "Password": "Password",
+    "DeleteImage": "Delete Image",
     "MessageThankYouForSupporting": "Thank you for supporting Emby.",
     "MessagePleaseSupportProject": "Please support Emby.",
-    "DeleteImageConfirmation": "Jeste\u015b pewien \u017ce chcesz usun\u0105\u0107 to zdj\u0119cie?",
-    "FileReadCancelled": "Odczytywanie pliku zosta\u0142o anulowane.",
-    "FileNotFound": "Plik nie znaleziony.",
-    "FileReadError": "Wyst\u0105pi\u0142 b\u0142\u0105d podczas odczytywania pliku.",
-    "DeleteUser": "Usu\u0144 u\u017cytkownika",
-    "DeleteUserConfirmation": "Czy na pewno chcesz skasowa\u0107 tego u\u017cytkownika?",
+    "DeleteImageConfirmation": "Are you sure you wish to delete this image?",
+    "FileReadCancelled": "The file read has been canceled.",
+    "FileNotFound": "File not found.",
+    "FileReadError": "An error occurred while reading the file.",
+    "DeleteUser": "Delete User",
+    "DeleteUserConfirmation": "Are you sure you wish to delete this user?",
     "PasswordResetHeader": "Reset Password",
-    "PasswordResetComplete": "Has\u0142o zosta\u0142o zresetowane.",
+    "PasswordResetComplete": "The password has been reset.",
     "PinCodeResetComplete": "The pin code has been reset.",
-    "PasswordResetConfirmation": "Jeste\u015b pewien \u017ce chcesz zresetowa\u0107 has\u0142o?",
+    "PasswordResetConfirmation": "Are you sure you wish to reset the password?",
     "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
     "HeaderPinCodeReset": "Reset Pin Code",
-    "PasswordSaved": "Has\u0142o zapisane.",
-    "PasswordMatchError": "Has\u0142o i potwierdzenie has\u0142a musz\u0105 si\u0119 zgadza\u0107.",
-    "OptionRelease": "Oficjalne wydanie",
+    "PasswordSaved": "Password saved.",
+    "PasswordMatchError": "Password and password confirmation must match.",
+    "OptionRelease": "Official Release",
     "OptionBeta": "Beta",
-    "OptionDev": "Dev (Niestabilne)",
-    "UninstallPluginHeader": "Usu\u0144 wtyczk\u0119",
-    "UninstallPluginConfirmation": "Czy na pewno chcesz usun\u0105\u0107 {0}?",
-    "NoPluginConfigurationMessage": "Ta wtyczka nie ma \u017cadnych ustawie\u0144.",
-    "NoPluginsInstalledMessage": "Nie masz \u017cadnych wtyczek zainstalowanych.",
-    "BrowsePluginCatalogMessage": "Przejrzyj nasz katalog wtyczek \u017ceby zobaczy\u0107 dost\u0119pne wtyczki.",
+    "OptionDev": "Dev (Unstable)",
+    "UninstallPluginHeader": "Uninstall Plugin",
+    "UninstallPluginConfirmation": "Are you sure you wish to uninstall {0}?",
+    "NoPluginConfigurationMessage": "This plugin has nothing to configure.",
+    "NoPluginsInstalledMessage": "You have no plugins installed.",
+    "BrowsePluginCatalogMessage": "Browse our plugin catalog to view available plugins.",
     "MessageKeyEmailedTo": "Key emailed to {0}.",
     "MessageKeysLinked": "Keys linked.",
     "HeaderConfirmation": "Confirmation",
     "MessageKeyUpdated": "Thank you. Your supporter key has been updated.",
     "MessageKeyRemoved": "Thank you. Your supporter key has been removed.",
     "HeaderSupportTheTeam": "Support the Emby Team",
-    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
+    "TextEnjoyBonusFeatures": "Erleb di ganze Bonis",
     "TitleLiveTV": "Live TV",
     "TitleSync": "Sync",
     "ButtonDonate": "Donate",
-    "LabelRecurringDonationCanBeCancelledHelp": "Recurring donations can be cancelled at any time from within your PayPal account.",
+    "LabelRecurringDonationCanBeCancelledHelp": "Gmachti Spende ch\u00f6nt jederziit abbroche werde mithilf vo dim PayPal Account.",
     "HeaderMyMedia": "My Media",
-    "TitleNotifications": "Notifications",
+    "TitleNotifications": "Mitteilige",
     "ErrorLaunchingChromecast": "There was an error launching chromecast. Please ensure your device is connected to your wireless network.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -51,7 +51,7 @@
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
     "ValueTimeLimitSingleHour": "Time limit: 1 hour",
     "ValueTimeLimitMultiHour": "Time limit: {0} hours",
-    "HeaderUsers": "U\u017cytkownicy",
+    "HeaderUsers": "User",
     "PluginCategoryGeneral": "General",
     "PluginCategoryContentProvider": "Content Providers",
     "PluginCategoryScreenSaver": "Screen Savers",
@@ -68,12 +68,12 @@
     "LabelMovie": "Movie",
     "LabelMusicVideo": "Music Video",
     "LabelEpisode": "Episode",
-    "LabelSeries": "Series",
+    "LabelSeries": "Serie",
     "LabelStopping": "Stopping",
     "LabelCancelled": "(cancelled)",
-    "LabelFailed": "(failed)",
+    "LabelFailed": "(fehlgschlage)",
     "ButtonHelp": "Help",
-    "ButtonSave": "Zapisz",
+    "ButtonSave": "Speichere",
     "ButtonDownload": "Download",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
@@ -85,28 +85,28 @@
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
-    "HeaderAddToCollection": "Add to Collection",
-    "NewCollectionNameExample": "Example: Star Wars Collection",
-    "OptionSearchForInternetMetadata": "Search the internet for artwork and metadata",
-    "LabelSelectCollection": "Select collection:",
+    "HeaderAddToCollection": "Zur Sammlig hinzue f\u00fcege",
+    "NewCollectionNameExample": "Biispell: Star Wars Sammlig",
+    "OptionSearchForInternetMetadata": "Dursuechs Internet nach Bilder und Metadate",
+    "LabelSelectCollection": "W\u00e4hl Sammlig:",
     "HeaderDevices": "Devices",
     "ButtonScheduledTasks": "Scheduled tasks",
     "MessageItemsAdded": "Items added",
     "ButtonAddToCollection": "Add to collection",
     "HeaderSelectCertificatePath": "Select Certificate Path",
     "ConfirmMessageScheduledTaskButton": "This operation normally runs automatically as a scheduled task. It can also be run manually here. To configure the scheduled task, see:",
-    "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to sync, premium plugins, internet channel content, and more. {0}Learn more{1}.",
+    "HeaderSupporterBenefit": "En Supporter-Mitgliedschaft git dir zues\u00e4tzlichi M\u00f6glichkeite wie de Zuegriff uf Synchronisierig, Premium Plugins, Internet Kan\u00e4l und meh. {0}Meh erfahre{1}",
     "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
     "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
     "HeaderWelcomeToProjectWebClient": "Welcome to Emby",
-    "ButtonTakeTheTour": "Take the tour",
+    "ButtonTakeTheTour": "Mach d'Tour",
     "HeaderWelcomeBack": "Welcome back!",
     "TitlePlugins": "Plugins",
     "ButtonTakeTheTourToSeeWhatsNew": "Take the tour to see what's new",
     "MessageNoSyncJobsFound": "No sync jobs found. Create sync jobs using the Sync buttons found throughout the web interface.",
     "HeaderLibraryAccess": "Library Access",
     "HeaderChannelAccess": "Channel Access",
-    "HeaderDeviceAccess": "Device Access",
+    "HeaderDeviceAccess": "Gr\u00e4t Zuegriff",
     "HeaderSelectDevices": "Select Devices",
     "ButtonCancelItem": "Cancel item",
     "ButtonQueueForRetry": "Queue for retry",
@@ -139,14 +139,14 @@
     "ButtonMute": "Mute",
     "ButtonUnmute": "Unmute",
     "ButtonStop": "Stop",
-    "ButtonNextTrack": "Next Track",
+    "ButtonNextTrack": "N\u00f6chsti Track",
     "ButtonPause": "Pause",
     "ButtonPlay": "Play",
     "ButtonEdit": "Edit",
     "ButtonQueue": "Queue",
-    "ButtonPlayTrailer": "Play trailer",
+    "ButtonPlayTrailer": "Spell de Trailer",
     "ButtonPlaylist": "Playlist",
-    "ButtonPreviousTrack": "Previous Track",
+    "ButtonPreviousTrack": "Vorherigi Track",
     "LabelEnabled": "Enabled",
     "LabelDisabled": "Disabled",
     "ButtonMoreInformation": "More Information",
@@ -173,13 +173,13 @@
     "MessageRecordingDeleted": "Recording deleted.",
     "ButonCancelRecording": "Cancel Recording",
     "MessageRecordingSaved": "Recording saved.",
-    "OptionSunday": "Niedziela",
-    "OptionMonday": "Poniedzia\u0142ek",
-    "OptionTuesday": "Wtorek",
-    "OptionWednesday": "\u015aroda",
-    "OptionThursday": "Czwartek",
-    "OptionFriday": "Pi\u0105tek",
-    "OptionSaturday": "Sobota",
+    "OptionSunday": "Sonntig",
+    "OptionMonday": "M\u00e4ntig",
+    "OptionTuesday": "Tsischtig",
+    "OptionWednesday": "Mittwoch",
+    "OptionThursday": "Donnstig",
+    "OptionFriday": "Friitig",
+    "OptionSaturday": "Samstig",
     "OptionEveryday": "Every day",
     "OptionWeekend": "Weekends",
     "OptionWeekday": "Weekdays",
@@ -205,7 +205,7 @@
     "MessagePleaseSelectTwoItems": "Please select at least two items.",
     "MessageTheFollowingItemsWillBeGrouped": "The following titles will be grouped into one item:",
     "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
-    "HeaderResume": "Wzn\u00f3w",
+    "HeaderResume": "Fortsetze",
     "HeaderMyViews": "My Views",
     "HeaderLibraryFolders": "Media Folders",
     "HeaderLatestMedia": "Latest Media",
@@ -276,8 +276,8 @@
     "MessageAreYouSureDeleteSubtitles": "Are you sure you wish to delete this subtitle file?",
     "ButtonRemoteControl": "Remote Control",
     "HeaderLatestTvRecordings": "Latest Recordings",
-    "ButtonOk": "Ok",
-    "ButtonCancel": "Anuluj",
+    "ButtonOk": "OK",
+    "ButtonCancel": "Abbreche",
     "ButtonRefresh": "Refresh",
     "LabelCurrentPath": "Current path:",
     "HeaderSelectMediaPath": "Select Media Path",
@@ -344,8 +344,8 @@
     "MessageValueNotCorrect": "The value entered is not correct. Please try again.",
     "MessageItemSaved": "Item saved.",
     "MessagePleaseAcceptTermsOfServiceBeforeContinuing": "Please accept the terms of service before continuing.",
-    "OptionEnded": "Zako\u0144czony",
-    "OptionContinuing": "Continuing",
+    "OptionEnded": "Beendent",
+    "OptionContinuing": "Fortlaufend",
     "OptionOff": "Off",
     "OptionOn": "On",
     "ButtonSettings": "Settings",
@@ -367,9 +367,9 @@
     "OptionName": "Name",
     "OptionOverview": "Overview",
     "OptionGenres": "Genres",
-    "OptionParentalRating": "Ocena rodzicielska",
+    "OptionParentalRating": "Altersfriigab",
     "OptionPeople": "People",
-    "OptionRuntime": "D\u0142ugo\u015b\u0107 filmu",
+    "OptionRuntime": "Laufziit",
     "OptionProductionLocations": "Production Locations",
     "OptionBirthLocation": "Birth Location",
     "LabelAllChannels": "All channels",
@@ -393,18 +393,18 @@
     "LabelPackageInstallCompleted": "{0} installation completed.",
     "LabelPackageInstallFailed": "{0} installation failed.",
     "LabelPackageInstallCancelled": "{0} installation cancelled.",
-    "TabServer": "Serwer",
+    "TabServer": "Server",
     "TabUsers": "Users",
     "TabLibrary": "Library",
-    "TabMetadata": "Metadata",
+    "TabMetadata": "Metadate",
     "TabDLNA": "DLNA",
     "TabLiveTV": "Live TV",
     "TabAutoOrganize": "Auto-Organize",
     "TabPlugins": "Plugins",
-    "TabAdvanced": "Zaawansowane",
+    "TabAdvanced": "Erwiitert",
     "TabHelp": "Help",
     "TabScheduledTasks": "Scheduled Tasks",
-    "ButtonFullscreen": "Fullscreen",
+    "ButtonFullscreen": "Vollbeld",
     "ButtonAudioTracks": "Audio Tracks",
     "ButtonSubtitles": "Subtitles",
     "ButtonScenes": "Scenes",
@@ -412,12 +412,12 @@
     "HeaderNotifications": "Notifications",
     "HeaderSelectPlayer": "Select Player:",
     "ButtonSelect": "Select",
-    "ButtonNew": "New",
+    "ButtonNew": "Neu",
     "MessageInternetExplorerWebm": "For best results with Internet Explorer please install the WebM playback plugin.",
     "HeaderVideoError": "Video Error",
     "ButtonAddToPlaylist": "Add to playlist",
     "HeaderAddToPlaylist": "Add to Playlist",
-    "LabelName": "Imi\u0119:",
+    "LabelName": "Name:",
     "ButtonSubmit": "Submit",
     "LabelSelectPlaylist": "Playlist:",
     "OptionNewPlaylist": "New playlist...",
@@ -447,11 +447,11 @@
     "HeaderEmbeddedImage": "Embedded image",
     "HeaderTrack": "Track",
     "HeaderDisc": "Disc",
-    "OptionMovies": "Filmy",
+    "OptionMovies": "Movies",
     "OptionCollections": "Collections",
     "OptionSeries": "Series",
     "OptionSeasons": "Seasons",
-    "OptionEpisodes": "Odcinki",
+    "OptionEpisodes": "Episodes",
     "OptionGames": "Games",
     "OptionGameSystems": "Game systems",
     "OptionMusicArtists": "Music artists",
@@ -478,7 +478,7 @@
     "PersonTypePerson": "Person",
     "LabelTitleDisplayOrder": "Title display order:",
     "OptionSortName": "Sort name",
-    "OptionReleaseDate": "Data wydania",
+    "OptionReleaseDate": "Ver\u00f6ffentlichigs Datum",
     "LabelSeasonNumber": "Season number:",
     "LabelDiscNumber": "Disc number",
     "LabelParentNumber": "Parent number",
@@ -507,23 +507,23 @@
     "LabelContentTypeValue": "Content type: {0}",
     "LabelPathSubstitutionHelp": "Optional: Path substitution can map server paths to network shares that clients can access for direct playback.",
     "FolderTypeUnset": "Unset (mixed content)",
-    "FolderTypeMovies": "Movies",
-    "FolderTypeMusic": "Music",
-    "FolderTypeAdultVideos": "Adult videos",
-    "FolderTypePhotos": "Photos",
-    "FolderTypeMusicVideos": "Music videos",
-    "FolderTypeHomeVideos": "Home videos",
+    "FolderTypeMovies": "Film",
+    "FolderTypeMusic": "Musig",
+    "FolderTypeAdultVideos": "Erwachseni Film",
+    "FolderTypePhotos": "F\u00f6teli",
+    "FolderTypeMusicVideos": "Musigvideos",
+    "FolderTypeHomeVideos": "Heimvideos",
     "FolderTypeGames": "Games",
-    "FolderTypeBooks": "Books",
+    "FolderTypeBooks": "B\u00fcecher",
     "FolderTypeTvShows": "TV",
-    "TabMovies": "Filmy",
+    "TabMovies": "Film",
     "TabSeries": "Series",
-    "TabEpisodes": "Odcinki",
-    "TabTrailers": "Zwiastuny",
-    "TabGames": "Gry",
-    "TabAlbums": "Albumy",
-    "TabSongs": "Utwory",
-    "TabMusicVideos": "Teledyski",
+    "TabEpisodes": "Episode",
+    "TabTrailers": "Trailers",
+    "TabGames": "Games",
+    "TabAlbums": "Albene",
+    "TabSongs": "Songs",
+    "TabMusicVideos": "Musigvideos",
     "BirthPlaceValue": "Birth place: {0}",
     "DeathDateValue": "Died: {0}",
     "BirthDateValue": "Born: {0}",
@@ -622,7 +622,7 @@
     "HeaderAlbums": "Albums",
     "HeaderGames": "Games",
     "HeaderBooks": "Books",
-    "HeaderEpisodes": "Episodes",
+    "HeaderEpisodes": "Episodene",
     "HeaderSeasons": "Seasons",
     "HeaderTracks": "Tracks",
     "HeaderItems": "Items",
@@ -660,7 +660,7 @@
     "MediaInfoStreamTypeEmbeddedImage": "Embedded Image",
     "MediaInfoRefFrames": "Ref frames",
     "TabPlayback": "Playback",
-    "TabNotifications": "Notifications",
+    "TabNotifications": "Mitteilige",
     "TabExpert": "Expert",
     "HeaderSelectCustomIntrosPath": "Select Custom Intros Path",
     "HeaderRateAndReview": "Rate and Review",
