--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -35,8 +35,8 @@
     "HeaderConfirmation": "Bekreftelse",
     "MessageKeyUpdated": "Takk. Din supportern\u00f8kkel har blitt oppdatert.",
     "MessageKeyRemoved": "Takk. Din supportern\u00f8kkel har blitt fjernet.",
-    "HeaderSupportTheTeam": "Support the Emby Team",
-    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
+    "HeaderSupportTheTeam": "St\u00f8tt Emby teamet!",
+    "TextEnjoyBonusFeatures": "Nyt bonusfunksjonene",
     "TitleLiveTV": "Live TV",
     "TitleSync": "Synk",
     "ButtonDonate": "Don\u00e9r",
@@ -44,13 +44,13 @@
     "HeaderMyMedia": "Mine media",
     "TitleNotifications": "Beskjeder",
     "ErrorLaunchingChromecast": "Det var en feil ved start av Chromecast. Vennligst forsikre deg om at enheten har korrekt forbindelse til ditt tr\u00e5dl\u00f8se nettverk.",
-    "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
+    "MessageErrorLoadingSupporterInfo": "Det oppstod en feil under innlasting supporterinformasjon. Vennligst pr\u00f8v igjen senere.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
     "HeaderConfirmRemoveUser": "Fjern bruker",
     "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Select the device to control by clicking the cast icon in the upper right corner. Swipe down anywhere on this screen to go back to where you came from.",
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
-    "ValueTimeLimitSingleHour": "Time limit: 1 hour",
-    "ValueTimeLimitMultiHour": "Time limit: {0} hours",
+    "ValueTimeLimitSingleHour": "Tidsgrense: 1 time",
+    "ValueTimeLimitMultiHour": "Tidsgrense: {0} time",
     "HeaderUsers": "Brukere",
     "PluginCategoryGeneral": "Generelt",
     "PluginCategoryContentProvider": "Innholdstilbydere",
@@ -61,7 +61,7 @@
     "PluginCategoryNotifications": "Varslinger",
     "PluginCategoryMetadata": "Metadata",
     "PluginCategoryLiveTV": "Live TV",
-    "PluginCategoryChannel": "Channels",
+    "PluginCategoryChannel": "Kanaler",
     "HeaderSearch": "S\u00f8k",
     "ValueDateCreated": "Dato opprettet: {0}",
     "LabelArtist": "Artist",
@@ -97,7 +97,7 @@
     "ConfirmMessageScheduledTaskButton": "Dette kj\u00f8res vanligvis automatisk som en planlagt oppgave. Den kan ogs\u00e5 kj\u00f8res manuelt herfra. For \u00e5 konfigurere planlagte oppgaver, se:",
     "HeaderSupporterBenefit": "St\u00f8ttemedlemskap gir ytterligere fordeler som for eksempel tilgang til synkronisering, premium plugins, internett-kanaler og mer. {0}L\u00e6r mer{1}.",
     "LabelSyncNoTargetsHelp": "Det ser ikke ut til at du har noen applikasjoner som st\u00f8tter synkronisering.",
-    "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
+    "HeaderWelcomeToProjectServerDashboard": "Velkommen til Emby Server Dashboard",
     "HeaderWelcomeToProjectWebClient": "Velkommen til Emby",
     "ButtonTakeTheTour": "Bli med p\u00e5 omvisning",
     "HeaderWelcomeBack": "Velkommen tilbake!",
@@ -122,11 +122,11 @@
     "LabelVersionInstalled": "{0} installert.",
     "LabelNumberReviews": "{0} Anmeldelser",
     "LabelFree": "Gratis",
-    "HeaderPlaybackError": "Playback Error",
-    "MessagePlaybackErrorNotAllowed": "You're currently not authorized to play this content. Please contact your system administrator for details.",
-    "MessagePlaybackErrorNoCompatibleStream": "No compatible streams are currently available. Please try again later or contact your system administrator for details.",
-    "MessagePlaybackErrorRateLimitExceeded": "Your playback rate limit has been exceeded. Please contact your system administrator for details.",
-    "MessagePlaybackErrorPlaceHolder": "The content chosen is not playable from this device.",
+    "HeaderPlaybackError": "Avspillingsfeil",
+    "MessagePlaybackErrorNotAllowed": "Du er for \u00f8yeblikket ikke autorisert til \u00e5 spille dette innholdet. Ta kontakt med systemadministratoren for mer informasjon.",
+    "MessagePlaybackErrorNoCompatibleStream": "Ingen kompatible streamer er tilgjengelig for \u00f8yeblikket. Vennligst pr\u00f8v igjen senere eller kontakt systemadministratoren for mer informasjon.",
+    "MessagePlaybackErrorRateLimitExceeded": "Avspillingshastighet grensen er overskredet. Ta kontakt med systemadministratoren for mer informasjon.",
+    "MessagePlaybackErrorPlaceHolder": "Valgt innholdet, kan ikke avspilles fra denne enheten.",
     "HeaderSelectAudio": "Velg Lyd",
     "HeaderSelectSubtitles": "Velg Undertekst",
     "ButtonMarkForRemoval": "Fjern fra enheten.",
@@ -200,11 +200,11 @@
     "HeaderSplitMedia": "Del Media Fra Hverandre",
     "MessageConfirmSplitMedia": "Er du sikker at du vil splitte mediakilden i separerte elementer?",
     "HeaderError": "Feil",
-    "MessageChromecastConnectionError": "Your Chromecast receiver is unable to connect to your Emby Server. Please check their connections and try again.",
+    "MessageChromecastConnectionError": "Chromecastmottakeren din klarer ikke \u00e5 koble til Emby Server. Vennligst sjekk deres internettforbindelser og pr\u00f8v igjen.",
     "MessagePleaseSelectOneItem": "Vennligst velg minst ett element.",
     "MessagePleaseSelectTwoItems": "Vennligst velg minst to elementer.",
     "MessageTheFollowingItemsWillBeGrouped": "F\u00f8lgende titler vil bli gruppert til ett element:",
-    "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
+    "MessageConfirmItemGrouping": "Emby apps vil automatisk velge den optimale versjonen for \u00e5 spille av, basert p\u00e5 enheten og nettverksytelse. Er du sikker p\u00e5 at du vil fortsette?",
     "HeaderResume": "Fortsette",
     "HeaderMyViews": "Mitt Syn",
     "HeaderLibraryFolders": "Media Mapper",
@@ -537,17 +537,17 @@
     "MessageInstallPluginFromApp": "Dette programtillegget m\u00e5 installeres direkte i appen du har tenkt \u00e5 bruke den i.",
     "ValuePriceUSD": "Pris: {0} (USD)",
     "MessageFeatureIncludedWithSupporter": "Du er registrert for denne funksjonen, og vil kunne fortsette \u00e5 bruke den med et aktiv supporter medlemskap.",
-    "MessageChangeRecurringPlanConfirm": "After completing this transaction you will need to cancel your previous recurring donation from within your PayPal account. Thank you for supporting Emby.",
+    "MessageChangeRecurringPlanConfirm": "Etter \u00e5 ha fullf\u00f8rt denne transaksjonen vil du m\u00e5tte avbestille din forrige gjentagende donasjon fra din PayPal-konto. Takk for at du st\u00f8tter Emby.",
     "MessageSupporterMembershipExpiredOn": "Ditt supporter medlemskap utl\u00f8p den {0}.",
-    "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
+    "MessageYouHaveALifetimeMembership": "Du har et levetid supporter medlemskap. Du kan gi ytterligere donasjoner engangs eller periodisk basis ved hjelp av alternativene nedenfor. Takk for at du st\u00f8tter Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "Du har et aktivt {0} medlemskap. Du kan oppgradere din plan ved hjelp av alternativene nedenfor.",
     "ButtonDelete": "Slett",
     "HeaderEmbyAccountAdded": "Emby konto lagt til",
-    "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
+    "MessageEmbyAccountAdded": "Emby-konto er blitt lagt til denne brukeren.",
     "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
-    "HeaderEmbyAccountRemoved": "Emby Account Removed",
+    "HeaderEmbyAccountRemoved": "Embykonto er fjernet",
     "MessageEmbyAccontRemoved": "The Emby account has been removed from this user.",
-    "TooltipLinkedToEmbyConnect": "Linked to Emby Connect",
+    "TooltipLinkedToEmbyConnect": "Knyttet til Emby Connect.",
     "HeaderUnrated": "Uvurdert",
     "ValueDiscNumber": "Disk {0}",
     "HeaderUnknownDate": "Ukjent dato",
@@ -766,5 +766,22 @@
     "ButtonRemote": "Fjernkont.",
     "TabInfo": "Info",
     "TabCast": "Cast",
-    "TabScenes": "Scener"
+    "TabScenes": "Scener",
+    "HeaderUnlockApp": "Unlock App",
+    "MessageUnlockAppWithPurchase": "Unlock the full features of the app with a small one-time purchase.",
+    "MessageUnlockAppWithPurchaseOrSupporter": "Unlock the full features of the app with a small one-time purchase, or by signing in with an active Emby Supporter Membership.",
+    "MessageUnlockAppWithSupporter": "Unlock the full features of the app by signing in with an active Emby Supporter Membership.",
+    "MessageToValidateSupporter": "If you have an active Emby Supporter Membership, simply sign into the app using your Wifi connection within your home network.",
+    "MessagePaymentServicesUnavailable": "Payment services are currently unavailable. Please try again later.",
+    "ButtonUnlockWithSupporter": "Sign in with Emby Supporter Membership",
+    "MessagePleaseSignInLocalNetwork": "Before proceeding, please ensure that you're connected to your local network using a Wifi or LAN connection.",
+    "ButtonUnlockWithPurchase": "Unlock with Purchase",
+    "MessageLiveTvGuideRequiresUnlock": "The Live TV Guide is currently limited to {0} channels. Click the unlock button to learn how to enjoy the full experience.",
+    "OptionEnableFullscreen": "Enable Fullscreen",
+    "ButtonServer": "Server",
+    "HeaderAdmin": "Admin",
+    "HeaderLibrary": "Library",
+    "HeaderMedia": "Media",
+    "ButtonInbox": "Inbox",
+    "HeaderAdvanced": "Avansert"
 }
