--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/ro.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/ro.json
@@ -1,48 +1,48 @@
 {
-    "SettingsSaved": "Ustawienia zapisane.",
-    "AddUser": "Dodaj u\u017cytkownika",
-    "Users": "U\u017cytkownicy",
-    "Delete": "Usu\u0144",
+    "SettingsSaved": "Settings saved.",
+    "AddUser": "Add User",
+    "Users": "Users",
+    "Delete": "Delete",
     "Administrator": "Administrator",
-    "Password": "Has\u0142o",
-    "DeleteImage": "Usu\u0144 zdj\u0119cie",
+    "Password": "Password",
+    "DeleteImage": "Delete Image",
     "MessageThankYouForSupporting": "Thank you for supporting Emby.",
     "MessagePleaseSupportProject": "Please support Emby.",
-    "DeleteImageConfirmation": "Jeste\u015b pewien \u017ce chcesz usun\u0105\u0107 to zdj\u0119cie?",
-    "FileReadCancelled": "Odczytywanie pliku zosta\u0142o anulowane.",
-    "FileNotFound": "Plik nie znaleziony.",
-    "FileReadError": "Wyst\u0105pi\u0142 b\u0142\u0105d podczas odczytywania pliku.",
-    "DeleteUser": "Usu\u0144 u\u017cytkownika",
-    "DeleteUserConfirmation": "Czy na pewno chcesz skasowa\u0107 tego u\u017cytkownika?",
+    "DeleteImageConfirmation": "Are you sure you wish to delete this image?",
+    "FileReadCancelled": "The file read has been canceled.",
+    "FileNotFound": "File not found.",
+    "FileReadError": "An error occurred while reading the file.",
+    "DeleteUser": "Delete User",
+    "DeleteUserConfirmation": "Are you sure you wish to delete this user?",
     "PasswordResetHeader": "Reset Password",
-    "PasswordResetComplete": "Has\u0142o zosta\u0142o zresetowane.",
+    "PasswordResetComplete": "The password has been reset.",
     "PinCodeResetComplete": "The pin code has been reset.",
-    "PasswordResetConfirmation": "Jeste\u015b pewien \u017ce chcesz zresetowa\u0107 has\u0142o?",
+    "PasswordResetConfirmation": "Are you sure you wish to reset the password?",
     "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
     "HeaderPinCodeReset": "Reset Pin Code",
-    "PasswordSaved": "Has\u0142o zapisane.",
-    "PasswordMatchError": "Has\u0142o i potwierdzenie has\u0142a musz\u0105 si\u0119 zgadza\u0107.",
-    "OptionRelease": "Oficjalne wydanie",
+    "PasswordSaved": "Password saved.",
+    "PasswordMatchError": "Password and password confirmation must match.",
+    "OptionRelease": "Official Release",
     "OptionBeta": "Beta",
-    "OptionDev": "Dev (Niestabilne)",
-    "UninstallPluginHeader": "Usu\u0144 wtyczk\u0119",
-    "UninstallPluginConfirmation": "Czy na pewno chcesz usun\u0105\u0107 {0}?",
-    "NoPluginConfigurationMessage": "Ta wtyczka nie ma \u017cadnych ustawie\u0144.",
-    "NoPluginsInstalledMessage": "Nie masz \u017cadnych wtyczek zainstalowanych.",
-    "BrowsePluginCatalogMessage": "Przejrzyj nasz katalog wtyczek \u017ceby zobaczy\u0107 dost\u0119pne wtyczki.",
+    "OptionDev": "Dev (Unstable)",
+    "UninstallPluginHeader": "Uninstall Plugin",
+    "UninstallPluginConfirmation": "Are you sure you wish to uninstall {0}?",
+    "NoPluginConfigurationMessage": "This plugin has nothing to configure.",
+    "NoPluginsInstalledMessage": "You have no plugins installed.",
+    "BrowsePluginCatalogMessage": "Browse our plugin catalog to view available plugins.",
     "MessageKeyEmailedTo": "Key emailed to {0}.",
     "MessageKeysLinked": "Keys linked.",
     "HeaderConfirmation": "Confirmation",
     "MessageKeyUpdated": "Thank you. Your supporter key has been updated.",
     "MessageKeyRemoved": "Thank you. Your supporter key has been removed.",
     "HeaderSupportTheTeam": "Support the Emby Team",
-    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
+    "TextEnjoyBonusFeatures": "Bucura\u021bi-v\u0103 de caracteristicile Bonus",
     "TitleLiveTV": "Live TV",
     "TitleSync": "Sync",
     "ButtonDonate": "Donate",
-    "LabelRecurringDonationCanBeCancelledHelp": "Recurring donations can be cancelled at any time from within your PayPal account.",
+    "LabelRecurringDonationCanBeCancelledHelp": "Dona\u021biile recurente pot fi anulate \u00een orice moment din contul dvs. PayPal.",
     "HeaderMyMedia": "My Media",
-    "TitleNotifications": "Notifications",
+    "TitleNotifications": "Notificari",
     "ErrorLaunchingChromecast": "There was an error launching chromecast. Please ensure your device is connected to your wireless network.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
@@ -51,7 +51,7 @@
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
     "ValueTimeLimitSingleHour": "Time limit: 1 hour",
     "ValueTimeLimitMultiHour": "Time limit: {0} hours",
-    "HeaderUsers": "U\u017cytkownicy",
+    "HeaderUsers": "Utilizatori",
     "PluginCategoryGeneral": "General",
     "PluginCategoryContentProvider": "Content Providers",
     "PluginCategoryScreenSaver": "Screen Savers",
@@ -68,12 +68,12 @@
     "LabelMovie": "Movie",
     "LabelMusicVideo": "Music Video",
     "LabelEpisode": "Episode",
-    "LabelSeries": "Series",
+    "LabelSeries": "Seriale",
     "LabelStopping": "Stopping",
     "LabelCancelled": "(cancelled)",
-    "LabelFailed": "(failed)",
-    "ButtonHelp": "Help",
-    "ButtonSave": "Zapisz",
+    "LabelFailed": "(eroare)",
+    "ButtonHelp": "Ajutor",
+    "ButtonSave": "Salveaza",
     "ButtonDownload": "Download",
     "SyncJobStatusQueued": "Queued",
     "SyncJobStatusConverting": "Converting",
@@ -85,28 +85,28 @@
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "SyncJobItemStatusReadyToTransfer": "Ready to Transfer",
     "LabelCollection": "Collection",
-    "HeaderAddToCollection": "Add to Collection",
-    "NewCollectionNameExample": "Example: Star Wars Collection",
-    "OptionSearchForInternetMetadata": "Search the internet for artwork and metadata",
-    "LabelSelectCollection": "Select collection:",
+    "HeaderAddToCollection": "Adauga la colectie",
+    "NewCollectionNameExample": "Exemplu: Star Wars Collection",
+    "OptionSearchForInternetMetadata": "C\u0103utare pe internet pentru postere \u0219i metadate",
+    "LabelSelectCollection": "Selecteaza colectia:",
     "HeaderDevices": "Devices",
     "ButtonScheduledTasks": "Scheduled tasks",
     "MessageItemsAdded": "Items added",
     "ButtonAddToCollection": "Add to collection",
     "HeaderSelectCertificatePath": "Select Certificate Path",
     "ConfirmMessageScheduledTaskButton": "This operation normally runs automatically as a scheduled task. It can also be run manually here. To configure the scheduled task, see:",
-    "HeaderSupporterBenefit": "A supporter membership provides additional benefits such as access to sync, premium plugins, internet channel content, and more. {0}Learn more{1}.",
+    "HeaderSupporterBenefit": "Un membru sus\u021bin\u0103tor ofer\u0103 beneficii suplimentare, cum ar fi accesul la sincronizare, plugin-uri premium, con\u021binut internet, \u0219i  multe altele. {0} Afla\u021bi mai multe {1}.",
     "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
     "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
     "HeaderWelcomeToProjectWebClient": "Welcome to Emby",
-    "ButtonTakeTheTour": "Take the tour",
+    "ButtonTakeTheTour": "Fa turul",
     "HeaderWelcomeBack": "Welcome back!",
-    "TitlePlugins": "Plugins",
+    "TitlePlugins": "Plugin-uri",
     "ButtonTakeTheTourToSeeWhatsNew": "Take the tour to see what's new",
     "MessageNoSyncJobsFound": "No sync jobs found. Create sync jobs using the Sync buttons found throughout the web interface.",
     "HeaderLibraryAccess": "Library Access",
     "HeaderChannelAccess": "Channel Access",
-    "HeaderDeviceAccess": "Device Access",
+    "HeaderDeviceAccess": "Accesul Dispozitivelor",
     "HeaderSelectDevices": "Select Devices",
     "ButtonCancelItem": "Cancel item",
     "ButtonQueueForRetry": "Queue for retry",
@@ -139,14 +139,14 @@
     "ButtonMute": "Mute",
     "ButtonUnmute": "Unmute",
     "ButtonStop": "Stop",
-    "ButtonNextTrack": "Next Track",
+    "ButtonNextTrack": "Pista urmatoare",
     "ButtonPause": "Pause",
     "ButtonPlay": "Play",
     "ButtonEdit": "Edit",
     "ButtonQueue": "Queue",
-    "ButtonPlayTrailer": "Play trailer",
+    "ButtonPlayTrailer": "Ruleaza trailer",
     "ButtonPlaylist": "Playlist",
-    "ButtonPreviousTrack": "Previous Track",
+    "ButtonPreviousTrack": "Pista anterioara",
     "LabelEnabled": "Enabled",
     "LabelDisabled": "Disabled",
     "ButtonMoreInformation": "More Information",
@@ -173,13 +173,13 @@
     "MessageRecordingDeleted": "Recording deleted.",
     "ButonCancelRecording": "Cancel Recording",
     "MessageRecordingSaved": "Recording saved.",
-    "OptionSunday": "Niedziela",
-    "OptionMonday": "Poniedzia\u0142ek",
-    "OptionTuesday": "Wtorek",
-    "OptionWednesday": "\u015aroda",
-    "OptionThursday": "Czwartek",
-    "OptionFriday": "Pi\u0105tek",
-    "OptionSaturday": "Sobota",
+    "OptionSunday": "Duminica",
+    "OptionMonday": "Luni",
+    "OptionTuesday": "Marti",
+    "OptionWednesday": "Miercuri",
+    "OptionThursday": "Joi",
+    "OptionFriday": "Vineri",
+    "OptionSaturday": "Sambata",
     "OptionEveryday": "Every day",
     "OptionWeekend": "Weekends",
     "OptionWeekday": "Weekdays",
@@ -205,7 +205,7 @@
     "MessagePleaseSelectTwoItems": "Please select at least two items.",
     "MessageTheFollowingItemsWillBeGrouped": "The following titles will be grouped into one item:",
     "MessageConfirmItemGrouping": "Emby apps will automatically choose the optimal version to play based on device and network performance. Are you sure you wish to continue?",
-    "HeaderResume": "Wzn\u00f3w",
+    "HeaderResume": "Reluare",
     "HeaderMyViews": "My Views",
     "HeaderLibraryFolders": "Media Folders",
     "HeaderLatestMedia": "Latest Media",
@@ -277,7 +277,7 @@
     "ButtonRemoteControl": "Remote Control",
     "HeaderLatestTvRecordings": "Latest Recordings",
     "ButtonOk": "Ok",
-    "ButtonCancel": "Anuluj",
+    "ButtonCancel": "Anuleaza",
     "ButtonRefresh": "Refresh",
     "LabelCurrentPath": "Current path:",
     "HeaderSelectMediaPath": "Select Media Path",
@@ -344,8 +344,8 @@
     "MessageValueNotCorrect": "The value entered is not correct. Please try again.",
     "MessageItemSaved": "Item saved.",
     "MessagePleaseAcceptTermsOfServiceBeforeContinuing": "Please accept the terms of service before continuing.",
-    "OptionEnded": "Zako\u0144czony",
-    "OptionContinuing": "Continuing",
+    "OptionEnded": "S-a sfarsit",
+    "OptionContinuing": "Continua",
     "OptionOff": "Off",
     "OptionOn": "On",
     "ButtonSettings": "Settings",
@@ -367,9 +367,9 @@
     "OptionName": "Name",
     "OptionOverview": "Overview",
     "OptionGenres": "Genres",
-    "OptionParentalRating": "Ocena rodzicielska",
+    "OptionParentalRating": "Rating Parental",
     "OptionPeople": "People",
-    "OptionRuntime": "D\u0142ugo\u015b\u0107 filmu",
+    "OptionRuntime": "Timp Rulare",
     "OptionProductionLocations": "Production Locations",
     "OptionBirthLocation": "Birth Location",
     "LabelAllChannels": "All channels",
@@ -393,31 +393,31 @@
     "LabelPackageInstallCompleted": "{0} installation completed.",
     "LabelPackageInstallFailed": "{0} installation failed.",
     "LabelPackageInstallCancelled": "{0} installation cancelled.",
-    "TabServer": "Serwer",
+    "TabServer": "Server",
     "TabUsers": "Users",
     "TabLibrary": "Library",
-    "TabMetadata": "Metadata",
+    "TabMetadata": "Metadate",
     "TabDLNA": "DLNA",
     "TabLiveTV": "Live TV",
     "TabAutoOrganize": "Auto-Organize",
     "TabPlugins": "Plugins",
-    "TabAdvanced": "Zaawansowane",
+    "TabAdvanced": "Avansat",
     "TabHelp": "Help",
     "TabScheduledTasks": "Scheduled Tasks",
-    "ButtonFullscreen": "Fullscreen",
-    "ButtonAudioTracks": "Audio Tracks",
+    "ButtonFullscreen": "Pe tot ecranul",
+    "ButtonAudioTracks": "Piste audio",
     "ButtonSubtitles": "Subtitles",
     "ButtonScenes": "Scenes",
     "ButtonQuality": "Quality",
     "HeaderNotifications": "Notifications",
     "HeaderSelectPlayer": "Select Player:",
     "ButtonSelect": "Select",
-    "ButtonNew": "New",
+    "ButtonNew": "Nou",
     "MessageInternetExplorerWebm": "For best results with Internet Explorer please install the WebM playback plugin.",
     "HeaderVideoError": "Video Error",
     "ButtonAddToPlaylist": "Add to playlist",
     "HeaderAddToPlaylist": "Add to Playlist",
-    "LabelName": "Imi\u0119:",
+    "LabelName": "Nume:",
     "ButtonSubmit": "Submit",
     "LabelSelectPlaylist": "Playlist:",
     "OptionNewPlaylist": "New playlist...",
@@ -428,9 +428,9 @@
     "ButtonRemoveFromPlaylist": "Remove from playlist",
     "HeaderSpecials": "Specials",
     "HeaderTrailers": "Trailers",
-    "HeaderAudio": "Audio",
+    "HeaderAudio": "Muzica",
     "HeaderResolution": "Resolution",
-    "HeaderVideo": "Video",
+    "HeaderVideo": "Filme",
     "HeaderRuntime": "Runtime",
     "HeaderCommunityRating": "Community rating",
     "HeaderPasswordReset": "Password Reset",
@@ -447,11 +447,11 @@
     "HeaderEmbeddedImage": "Embedded image",
     "HeaderTrack": "Track",
     "HeaderDisc": "Disc",
-    "OptionMovies": "Filmy",
+    "OptionMovies": "Movies",
     "OptionCollections": "Collections",
     "OptionSeries": "Series",
     "OptionSeasons": "Seasons",
-    "OptionEpisodes": "Odcinki",
+    "OptionEpisodes": "Episodes",
     "OptionGames": "Games",
     "OptionGameSystems": "Game systems",
     "OptionMusicArtists": "Music artists",
@@ -478,7 +478,7 @@
     "PersonTypePerson": "Person",
     "LabelTitleDisplayOrder": "Title display order:",
     "OptionSortName": "Sort name",
-    "OptionReleaseDate": "Data wydania",
+    "OptionReleaseDate": "Data lansare",
     "LabelSeasonNumber": "Season number:",
     "LabelDiscNumber": "Disc number",
     "LabelParentNumber": "Parent number",
@@ -507,23 +507,23 @@
     "LabelContentTypeValue": "Content type: {0}",
     "LabelPathSubstitutionHelp": "Optional: Path substitution can map server paths to network shares that clients can access for direct playback.",
     "FolderTypeUnset": "Unset (mixed content)",
-    "FolderTypeMovies": "Movies",
-    "FolderTypeMusic": "Music",
-    "FolderTypeAdultVideos": "Adult videos",
-    "FolderTypePhotos": "Photos",
-    "FolderTypeMusicVideos": "Music videos",
-    "FolderTypeHomeVideos": "Home videos",
-    "FolderTypeGames": "Games",
-    "FolderTypeBooks": "Books",
-    "FolderTypeTvShows": "TV",
-    "TabMovies": "Filmy",
+    "FolderTypeMovies": "Filme",
+    "FolderTypeMusic": "Muzica",
+    "FolderTypeAdultVideos": "Filme Porno",
+    "FolderTypePhotos": "Fotografii",
+    "FolderTypeMusicVideos": "Videoclipuri",
+    "FolderTypeHomeVideos": "Video Personale",
+    "FolderTypeGames": "Jocuri",
+    "FolderTypeBooks": "Carti",
+    "FolderTypeTvShows": "Seriale TV",
+    "TabMovies": "Filme",
     "TabSeries": "Series",
-    "TabEpisodes": "Odcinki",
-    "TabTrailers": "Zwiastuny",
-    "TabGames": "Gry",
-    "TabAlbums": "Albumy",
-    "TabSongs": "Utwory",
-    "TabMusicVideos": "Teledyski",
+    "TabEpisodes": "Episoade",
+    "TabTrailers": "Trailere",
+    "TabGames": "Games",
+    "TabAlbums": "Albume",
+    "TabSongs": "Cantece",
+    "TabMusicVideos": "Videoclipuri",
     "BirthPlaceValue": "Birth place: {0}",
     "DeathDateValue": "Died: {0}",
     "BirthDateValue": "Born: {0}",
@@ -622,7 +622,7 @@
     "HeaderAlbums": "Albums",
     "HeaderGames": "Games",
     "HeaderBooks": "Books",
-    "HeaderEpisodes": "Episodes",
+    "HeaderEpisodes": "Episoade",
     "HeaderSeasons": "Seasons",
     "HeaderTracks": "Tracks",
     "HeaderItems": "Items",
@@ -660,7 +660,7 @@
     "MediaInfoStreamTypeEmbeddedImage": "Embedded Image",
     "MediaInfoRefFrames": "Ref frames",
     "TabPlayback": "Playback",
-    "TabNotifications": "Notifications",
+    "TabNotifications": "Notificari",
     "TabExpert": "Expert",
     "HeaderSelectCustomIntrosPath": "Select Custom Intros Path",
     "HeaderRateAndReview": "Rate and Review",
