--- a/MediaBrowser.Server.Implementations/Localization/Server/es-AR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es-AR.json
@@ -1,21 +1,21 @@
 {
-    "LabelExit": "Exit",
+    "LabelExit": "Salir",
     "LabelVisitCommunity": "Visit Community",
     "LabelGithub": "Github",
     "LabelSwagger": "Swagger",
-    "LabelStandard": "Standard",
-    "LabelApiDocumentation": "Api Documentation",
+    "LabelStandard": "Est\u00e1ndar",
+    "LabelApiDocumentation": "Documentaci\u00f3n API",
     "LabelDeveloperResources": "Developer Resources",
     "LabelBrowseLibrary": "Browse Library",
-    "LabelConfigureServer": "Configure Emby",
+    "LabelConfigureServer": "Configurar Emby",
     "LabelOpenLibraryViewer": "Open Library Viewer",
-    "LabelRestartServer": "Restart Server",
+    "LabelRestartServer": "Reiniciar el servidor",
     "LabelShowLogWindow": "Show Log Window",
     "LabelPrevious": "Previous",
     "LabelFinish": "Finish",
     "LabelNext": "Next",
-    "LabelYoureDone": "You're Done!",
-    "WelcomeToProject": "Welcome to Emby!",
+    "LabelYoureDone": "Ha terminado!",
+    "WelcomeToProject": "Bienvenidos a Emby!",
     "ThisWizardWillGuideYou": "This wizard will help guide you through the setup process. To begin, please select your preferred language.",
     "TellUsAboutYourself": "Tell us about yourself",
     "ButtonQuickStartGuide": "Quick start guide",
@@ -34,7 +34,7 @@
     "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Enable automatic port mapping",
     "LabelEnableAutomaticPortMappingHelp": "UPnP allows automated router configuration for easy remote access. This may not work with some router models.",
-    "HeaderTermsOfService": "Emby Terms of Service",
+    "HeaderTermsOfService": "T\u00e9rminos de servicios de Emby",
     "MessagePleaseAcceptTermsOfService": "Please accept the terms of service and privacy policy before continuing.",
     "OptionIAcceptTermsOfService": "I accept the terms of service",
     "ButtonPrivacyPolicy": "Privacy policy",
@@ -46,10 +46,10 @@
     "LabelDashboardSourcePath": "Web client source path:",
     "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
     "ButtonConvertMedia": "Convert media",
-    "ButtonOrganize": "Organise",
+    "ButtonOrganize": "Organizar",
     "LinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderSupporterBenefits": "Supporter Benefits",
-    "HeaderAddUser": "Add User",
+    "HeaderAddUser": "Agregar Usuario",
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
     "LabelPinCode": "Pin code:",
     "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
@@ -131,7 +131,7 @@
     "OptionEnableAccessToAllChannels": "Enable access to all channels",
     "OptionEnableAccessToAllLibraries": "Enable access to all libraries",
     "DeviceAccessHelp": "This only applies to devices that can be uniquely identified and will not prevent browser access. Filtering user device access will prevent them from using new devices until they've been approved here.",
-    "LabelDisplayMissingEpisodesWithinSeasons": "Display missing episodes within seasons",
+    "LabelDisplayMissingEpisodesWithinSeasons": "Mostar cap\u00edtulos no disponibles en temporadas",
     "LabelUnairedMissingEpisodesWithinSeasons": "Display unaired episodes within seasons",
     "HeaderVideoPlaybackSettings": "Video Playback Settings",
     "HeaderPlaybackSettings": "Playback Settings",
@@ -173,14 +173,14 @@
     "TabLatest": "Latest",
     "TabUpcoming": "Upcoming",
     "TabShows": "Shows",
-    "TabEpisodes": "Episodes",
+    "TabEpisodes": "Cap\u00edtulos",
     "TabGenres": "Genres",
     "TabPeople": "People",
     "TabNetworks": "Networks",
     "HeaderUsers": "Users",
     "HeaderFilters": "Filters:",
     "ButtonFilter": "Filter",
-    "OptionFavorite": "Favourites",
+    "OptionFavorite": "Favorites",
     "OptionLikes": "Likes",
     "OptionDislikes": "Dislikes",
     "OptionActors": "Actors",
@@ -191,7 +191,7 @@
     "HeaderResume": "Resume",
     "HeaderNextUp": "Next Up",
     "NoNextUpItemsMessage": "None found. Start watching your shows!",
-    "HeaderLatestEpisodes": "Latest Episodes",
+    "HeaderLatestEpisodes": "\u00daltimos cap\u00edtulos",
     "HeaderPersonTypes": "Person Types:",
     "TabSongs": "Songs",
     "TabAlbums": "Albums",
@@ -324,7 +324,7 @@
     "PismoMessage": "Utilizing Pismo File Mount through a donated license.",
     "TangibleSoftwareMessage": "Utilizing Tangible Solutions Java\/C# converters through a donated license.",
     "HeaderCredits": "Credits",
-    "PleaseSupportOtherProduces": "Please support other free products we utilise:",
+    "PleaseSupportOtherProduces": "Please support other free products we utilize:",
     "VersionNumber": "Version {0}",
     "TabPaths": "Paths",
     "TabServer": "Server",
@@ -388,7 +388,7 @@
     "TabRecordings": "Recordings",
     "TabScheduled": "Scheduled",
     "TabSeries": "Series",
-    "TabFavorites": "Favourites",
+    "TabFavorites": "Favorites",
     "TabMyLibrary": "My Library",
     "ButtonCancelRecording": "Cancel Recording",
     "HeaderPrePostPadding": "Pre\/Post Padding",
@@ -406,7 +406,7 @@
     "OptionPriority": "Priority",
     "OptionRecordOnAllChannels": "Record on all channels",
     "OptionRecordAnytime": "Record at any time",
-    "OptionRecordOnlyNewEpisodes": "Record only new episodes",
+    "OptionRecordOnlyNewEpisodes": "Grabar s\u00f3lo nuevos cap\u00edtulos",
     "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "Days",
     "HeaderActiveRecordings": "Active Recordings",
@@ -498,9 +498,9 @@
     "LabelToHelp": "Example: \\\\MyServer\\Movies (a path clients can access)",
     "ButtonAddPathSubstitution": "Add Substitution",
     "OptionSpecialEpisode": "Specials",
-    "OptionMissingEpisode": "Missing Episodes",
-    "OptionUnairedEpisode": "Unaired Episodes",
-    "OptionEpisodeSortName": "Episode Sort Name",
+    "OptionMissingEpisode": "Cap\u00edtulos faltantes",
+    "OptionUnairedEpisode": "Cap\u00edtulos no emitidos",
+    "OptionEpisodeSortName": "Nombre corto del cap\u00edtulo",
     "OptionSeriesSortName": "Series Name",
     "OptionTvdbRating": "Tvdb Rating",
     "HeaderTranscodingQualityPreference": "Transcoding Quality Preference:",
@@ -568,7 +568,7 @@
     "LabelMinResumePercentageHelp": "Titles are assumed unplayed if stopped before this time",
     "LabelMaxResumePercentageHelp": "Titles are assumed fully played if stopped after this time",
     "LabelMinResumeDurationHelp": "Titles shorter than this will not be resumable",
-    "TitleAutoOrganize": "Auto-Organise",
+    "TitleAutoOrganize": "Auto-Organize",
     "TabActivityLog": "Activity Log",
     "HeaderName": "Name",
     "HeaderDate": "Date",
@@ -579,7 +579,7 @@
     "LabelCompleted": "Completed",
     "LabelFailed": "Failed",
     "LabelSkipped": "Skipped",
-    "HeaderEpisodeOrganization": "Episode Organisation",
+    "HeaderEpisodeOrganization": "Episode Organization",
     "LabelSeries": "Series:",
     "LabelSeasonNumber": "Season number:",
     "LabelEpisodeNumber": "Episode number:",
@@ -590,11 +590,11 @@
     "HeaderSupportTheTeamHelp": "Help ensure the continued development of this project by donating. A portion of all donations will be contributed to other free tools we depend on.",
     "ButtonEnterSupporterKey": "Enter supporter key",
     "DonationNextStep": "Once complete, please return and enter your supporter key, which you will receive by email.",
-    "AutoOrganizeHelp": "Auto-organise monitors your download folders for new files and moves them to your media directories",
-    "AutoOrganizeTvHelp": "TV file organising will only add episodes to existing series. It will not create new series folders.",
-    "OptionEnableEpisodeOrganization": "Enable new episode organisation",
+    "AutoOrganizeHelp": "Auto-organize monitors your download folders for new files and moves them to your media directories.",
+    "AutoOrganizeTvHelp": "TV file organizing will only add episodes to existing series. It will not create new series folders.",
+    "OptionEnableEpisodeOrganization": "Enable new episode organization",
     "LabelWatchFolder": "Watch folder:",
-    "LabelWatchFolderHelp": "The server will poll this folder during the 'Organise new media files' scheduled task.",
+    "LabelWatchFolderHelp": "The server will poll this folder during the 'Organize new media files' scheduled task.",
     "ButtonViewScheduledTasks": "View scheduled tasks",
     "LabelMinFileSizeForOrganize": "Minimum file size (MB):",
     "LabelMinFileSizeForOrganizeHelp": "Files under this size will be ignored.",
@@ -665,7 +665,7 @@
     "LabelWeatherDisplayLocation": "Weather display location:",
     "LabelWeatherDisplayLocationHelp": "US zip code \/ City, State, Country \/ City, Country",
     "LabelWeatherDisplayUnit": "Weather display unit:",
-    "OptionCelsius": "Celsius",
+    "OptionCelsius": "Cent\u00edgrado",
     "OptionFahrenheit": "Fahrenheit",
     "HeaderRequireManualLogin": "Require manual username entry for:",
     "HeaderRequireManualLoginHelp": "When disabled clients may present a login screen with a visual selection of users.",
@@ -818,7 +818,7 @@
     "HeaderIdentificationCriteriaHelp": "Enter at least one identification criteria.",
     "HeaderDirectPlayProfileHelp": "Add direct play profiles to indicate which formats the device can handle natively.",
     "HeaderTranscodingProfileHelp": "Add transcoding profiles to indicate which formats should be used when transcoding is required.",
-    "HeaderResponseProfileHelp": "Response profiles provide a way to customise information sent to the device when playing certain kinds of media.",
+    "HeaderResponseProfileHelp": "Response profiles provide a way to customize information sent to the device when playing certain kinds of media.",
     "LabelXDlnaCap": "X-Dlna cap:",
     "LabelXDlnaCapHelp": "Determines the content of the X_DLNACAP element in the urn:schemas-dlna-org:device-1-0 namespace.",
     "LabelXDlnaDoc": "X-Dlna doc:",
@@ -939,7 +939,7 @@
     "ViewTypeLiveTvNowPlaying": "Now Airing",
     "ViewTypeLatestGames": "Latest Games",
     "ViewTypeRecentlyPlayedGames": "Recently Played",
-    "ViewTypeGameFavorites": "Favourites",
+    "ViewTypeGameFavorites": "Favorites",
     "ViewTypeGameSystems": "Game Systems",
     "ViewTypeGameGenres": "Genres",
     "ViewTypeTvResume": "Resume",
@@ -947,13 +947,13 @@
     "ViewTypeTvLatest": "Latest",
     "ViewTypeTvShowSeries": "Series",
     "ViewTypeTvGenres": "Genres",
-    "ViewTypeTvFavoriteSeries": "Favourite Series",
-    "ViewTypeTvFavoriteEpisodes": "Favourite Episodes",
+    "ViewTypeTvFavoriteSeries": "Favorite Series",
+    "ViewTypeTvFavoriteEpisodes": "Favorite Episodes",
     "ViewTypeMovieResume": "Resume",
     "ViewTypeMovieLatest": "Latest",
     "ViewTypeMovieMovies": "Movies",
     "ViewTypeMovieCollections": "Collections",
-    "ViewTypeMovieFavorites": "Favourites",
+    "ViewTypeMovieFavorites": "Favorites",
     "ViewTypeMovieGenres": "Genres",
     "ViewTypeMusicLatest": "Latest",
     "ViewTypeMusicPlaylists": "Playlists",
@@ -961,10 +961,10 @@
     "ViewTypeMusicAlbumArtists": "Album Artists",
     "HeaderOtherDisplaySettings": "Display Settings",
     "ViewTypeMusicSongs": "Songs",
-    "ViewTypeMusicFavorites": "Favourites",
-    "ViewTypeMusicFavoriteAlbums": "Favourite Albums",
-    "ViewTypeMusicFavoriteArtists": "Favourite Artists",
-    "ViewTypeMusicFavoriteSongs": "Favourite Songs",
+    "ViewTypeMusicFavorites": "Favorites",
+    "ViewTypeMusicFavoriteAlbums": "Favorite Albums",
+    "ViewTypeMusicFavoriteArtists": "Favorite Artists",
+    "ViewTypeMusicFavoriteSongs": "Favorite Songs",
     "HeaderMyViews": "My Views",
     "LabelSelectFolderGroups": "Automatically group content from the following folders into views such as Movies, Music and TV:",
     "LabelSelectFolderGroupsHelp": "Folders that are unchecked will be displayed by themselves in their own view.",
