--- a/MediaBrowser.Server.Implementations/Localization/Server/es.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es.json
@@ -4,7 +4,7 @@
     "LabelGithub": "Github",
     "LabelSwagger": "Swagger",
     "LabelStandard": "Est\u00e1ndar",
-    "LabelApiDocumentation": "Documentacion de Componentes",
+    "LabelApiDocumentation": "Documentaci\u00f3n API",
     "LabelDeveloperResources": "Recursos del Desarrollador",
     "LabelBrowseLibrary": "Navegar biblioteca",
     "LabelConfigureServer": "Configurar Emby",
@@ -18,7 +18,7 @@
     "WelcomeToProject": "Bienvenidos a Emby!",
     "ThisWizardWillGuideYou": "Este asistente lo guiar\u00e1 por el proceso de instalaci\u00f3n. Para comenzar, seleccione su idioma preferido.",
     "TellUsAboutYourself": "D\u00edganos acerca de usted",
-    "ButtonQuickStartGuide": "Guia de inicio rapido",
+    "ButtonQuickStartGuide": "Gu\u00eda de inicio r\u00e1pido",
     "LabelYourFirstName": "Su primer nombre:",
     "MoreUsersCanBeAddedLater": "M\u00e1s usuarios pueden agregarse m\u00e1s tarde en el panel de control.",
     "UserProfilesIntro": "Emby incluye soporte interno para perfiles de usuarios, permitiendo que cada usuario tenga sus propios ajustes, estado de reproducci\u00f3n y control parental.",
@@ -34,24 +34,24 @@
     "LabelChapterImageExtractionForMoviesHelp": "Extraer imagenes de capitulos permitir\u00e1 a los usuarios ver escenas gr\u00e1ficas en la seleccion de men\u00fa. El proceso puede ser lento, cpu-intenso y puede requerir algunos gigabytes de espacio.",
     "LabelEnableAutomaticPortMapping": "Habilitar asignaci\u00f3n de puertos autom\u00e1tico",
     "LabelEnableAutomaticPortMappingHelp": "UPnP permite la configuraci\u00f3n del router para acceso externo de forma f\u00e1cil y autom\u00e1tica. Esto puede no funcionar en algunos modelos de routers.",
-    "HeaderTermsOfService": "Terminos de servicios de Emby",
+    "HeaderTermsOfService": "T\u00e9rminos de servicios de Emby",
     "MessagePleaseAcceptTermsOfService": "Por favor aceptar los terminos de servicios y politica de privacidad antes de continuar.",
     "OptionIAcceptTermsOfService": "Acepto los terminos de servicio",
     "ButtonPrivacyPolicy": "Politica de privacidad",
     "ButtonTermsOfService": "Terminos de servicios",
     "HeaderDeveloperOptions": "Recursos del Desarrollador",
-    "OptionEnableWebClientResponseCache": "Enable web client response caching",
+    "OptionEnableWebClientResponseCache": "Habilitar almacenamiento de cach\u00e9 de respuestas del cliente web.",
     "OptionDisableForDevelopmentHelp": "Configure cuantas veces sea nesesario para propositos del desarrollo de cliente de la red.",
     "OptionEnableWebClientResourceMinification": "Habilitar minificaci\u00f3n de recursos para la aplicacion en linea",
     "LabelDashboardSourcePath": "Localizaci\u00f3n de la fuente del cliente web:",
-    "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
+    "LabelDashboardSourcePathHelp": "Si est\u00e1 ejecutando el servidor desde la fuente, especifique la ruta de acceso a la carpeta dashboard-ui. Todos los archivos del cliente web ser\u00e1n atendidos desde esta ruta.",
     "ButtonConvertMedia": "Convertir medios",
     "ButtonOrganize": "Organizar",
     "LinkedToEmbyConnect": "Vincular a Emby Connect",
     "HeaderSupporterBenefits": "Beneficios del partidario",
     "HeaderAddUser": "Agregar Usuario",
     "LabelAddConnectSupporterHelp": "Para agregar a un usuario que no est\u00e1 en el listado, usted tiene primero que conectar su cuenta con Emby Connect desde la p\u00e1gina de perfil del usuario.",
-    "LabelPinCode": "Contrase\u00f1a:",
+    "LabelPinCode": "C\u00f3digo PIN:",
     "OptionHideWatchedContentFromLatestMedia": "Esconder medios vistos de los medios m\u00e1s recientes",
     "HeaderSync": "Sincronizar",
     "ButtonOk": "OK",
@@ -64,13 +64,13 @@
     "HeaderPaths": "Ruta",
     "CategorySync": "Sincronizar",
     "TabPlaylist": "Lista de reproducci\u00f3n",
-    "HeaderEasyPinCode": "Contrase\u00f1a facil",
+    "HeaderEasyPinCode": "F\u00e1cil c\u00f3digo PIN:",
     "HeaderGrownupsOnly": "Adultos solamente!",
     "DividerOr": "-- y --",
     "HeaderInstalledServices": "Servicios Instalados",
     "HeaderAvailableServices": "Servicios Disponibles",
     "MessageNoServicesInstalled": "No hay servicios instalados.",
-    "HeaderToAccessPleaseEnterEasyPinCode": "Para acceder, por favor introdusca su contrase\u00f1a facil.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "Para acceder, por favor introduzca su f\u00e1cil c\u00f3digo PIN.",
     "KidsModeAdultInstruction": "Haga clic en el icono en la parte de abajo derecha para configurar o salir del modo de menores. Su codigo PIN es requerido.",
     "ButtonConfigurePinCode": "Configurar contrase\u00f1a",
     "HeaderAdultsReadHere": "Adultos Leer Aqui!",
@@ -78,7 +78,7 @@
     "HeaderSyncRequiresSupporterMembership": "Sync requiere membres\u00eda de partidario",
     "HeaderEnjoyDayTrial": "Disfrute 14 Dias Gratis de Prueba",
     "LabelSyncTempPath": "Localizaci\u00f3n del archivo temporal:",
-    "LabelSyncTempPathHelp": "Specify a custom sync working folder. Converted media created during the sync process will be stored here.",
+    "LabelSyncTempPathHelp": "Especificar una carpeta personalizada para achivos en sincronizaci\u00f3n. Medios convertidos creados durante el proceso de sincronizaci\u00f3n ser\u00e1n guardados aqu\u00ed.",
     "LabelCustomCertificatePath": "Lugar del certificado personalizado:",
     "LabelCustomCertificatePathHelp": "Aplique su propio certificado ssl or archivo .pfx. Si lo omite el servidor crear\u00e1 un certificado auto-registrador.",
     "TitleNotifications": "Notificaciones",
@@ -122,7 +122,7 @@
     "TabAccess": "Acceso",
     "TabImage": "imagen",
     "TabProfile": "Perfil",
-    "TabMetadata": "Metadata",
+    "TabMetadata": "Metadatos",
     "TabImages": "Im\u00e1genes",
     "TabNotifications": "Notificaciones",
     "TabCollectionTitles": "T\u00edtulos",
@@ -194,7 +194,7 @@
     "HeaderLatestEpisodes": "Ultimos episodios",
     "HeaderPersonTypes": "Tipos de personas:",
     "TabSongs": "Canciones",
-    "TabAlbums": "Albums",
+    "TabAlbums": "\u00c1lbumes",
     "TabArtists": "Artistas",
     "TabAlbumArtists": "Album Artistas",
     "TabMusicVideos": "Videos Musicales",
@@ -212,7 +212,7 @@
     "OptionDateAdded": "A\u00f1adido el",
     "OptionAlbumArtist": "Album Artista",
     "OptionArtist": "Artista",
-    "OptionAlbum": "Album",
+    "OptionAlbum": "\u00c1lbum",
     "OptionTrackName": "Nombre de pista",
     "OptionCommunityRating": "Valoraci\u00f3n comunidad",
     "OptionNameSort": "Nombre",
@@ -348,7 +348,7 @@
     "LabelMetadataPath": "Ruta de Metadata:",
     "LabelMetadataPathHelp": "Especifique una localizaci\u00f3n personalizada para bajar imagenes y metadatos, si no son guardadas dentro de las carpetas de los medios.",
     "LabelTranscodingTempPath": "Ruta temporal de transcodificaci\u00f3n:",
-    "LabelTranscodingTempPathHelp": "This folder contains working files used by the transcoder. Specify a custom path, or leave empty to use the default within the server's data folder.",
+    "LabelTranscodingTempPathHelp": "Esta carpeta contiene achivos en uso por el transcodificador. Especificar una ruta personalizada, o dejarla vac\u00eda para usar la ruta predeterminada en la carpeta de datos del servidor.",
     "TabBasics": "Basicos",
     "TabTV": "TV",
     "TabGames": "Juegos",
@@ -358,22 +358,22 @@
     "OptionMovies": "Pel\u00edculas",
     "OptionEpisodes": "Episodios",
     "OptionOtherVideos": "Otros v\u00eddeos",
-    "TitleMetadata": "Metadata",
+    "TitleMetadata": "Metadatos",
     "LabelAutomaticUpdates": "Habilite actualizaciones automaticas",
     "LabelAutomaticUpdatesTmdb": "Activar actualizaciones autom\u00e1ticas desde TheMovieDB.org",
     "LabelAutomaticUpdatesTvdb": "Activar actualizaciones autom\u00e1ticas desde TheTVDB.com",
     "LabelAutomaticUpdatesFanartHelp": "Si est\u00e1 activado, las nuevas im\u00e1genes se descargan autom\u00e1ticamente a medida que se a\u00f1aden a fanart.tv. Im\u00e1genes existentes no ser\u00e1n reemplazadas.",
     "LabelAutomaticUpdatesTmdbHelp": "Si est\u00e1 activado, las nuevas im\u00e1genes se descargan autom\u00e1ticamente a medida que se a\u00f1aden a TheMovieDB.org. Im\u00e1genes existentes no ser\u00e1n reemplazados.",
     "LabelAutomaticUpdatesTvdbHelp": "Si est\u00e1 activado, las nuevas im\u00e1genes se descargan autom\u00e1ticamente a medida que se a\u00f1aden a TheTVDB.com. Im\u00e1genes existentes no ser\u00e1n reemplazados.",
-    "LabelFanartApiKey": "Personal api key:",
+    "LabelFanartApiKey": "Clave personal de API:",
     "LabelFanartApiKeyHelp": "Requests to fanart without a personal API key return results that were approved over 7 days ago. With a personal API key that drops to 48 hours and if you are also a fanart VIP member that will further drop to around 10 minutes.",
     "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelMetadataDownloadLanguage": "Idioma preferido visualizado",
     "ButtonAutoScroll": "Auto-desplazamiento",
     "LabelImageSavingConvention": "Sistema de guardado de im\u00e1genes:",
-    "LabelImageSavingConventionHelp": "Emby recognizes images from most major media applications. Choosing your downloading convention is useful if you also use other products.",
+    "LabelImageSavingConventionHelp": "Emby reconoce im\u00e1genes de la mayor\u00eda de las principales aplicaciones de medios. Seleccionar su convenci\u00f3n de descarga es \u00fatil si tambi\u00e9n usa otros productos.",
     "OptionImageSavingCompatible": "Compatible - Emby\/Kodi\/Plex",
-    "OptionImageSavingStandard": "Standard - MB2",
+    "OptionImageSavingStandard": "Est\u00e1ndar - MB2",
     "ButtonSignIn": "Registrarse",
     "TitleSignIn": "Registrarse",
     "HeaderPleaseSignIn": "Por favor reg\u00edstrese",
@@ -532,7 +532,7 @@
     "HeaderSystemPaths": "Rutas del sistema",
     "LinkCommunity": "Comunidad",
     "LinkGithub": "Github",
-    "LinkApi": "Api",
+    "LinkApi": "API",
     "LinkApiDocumentation": "Documentaci\u00f3n API",
     "LabelFriendlyServerName": "Nombre informal del servidor:",
     "LabelFriendlyServerNameHelp": "Este nombre se podr\u00e1 utilizar para identificar este servidor. Si se deja en blanco se usar\u00e1 el nombre del ordenador.",
@@ -582,7 +582,7 @@
     "HeaderEpisodeOrganization": "Organizaci\u00f3n de episodios",
     "LabelSeries": "Series:",
     "LabelSeasonNumber": "Temporada n\u00famero:",
-    "LabelEpisodeNumber": "Episodio n\u00famero:",
+    "LabelEpisodeNumber": "N\u00famero de cap\u00edtulo:",
     "LabelEndingEpisodeNumber": "N\u00famero episodio final:",
     "LabelEndingEpisodeNumberHelp": "S\u00f3lo requerido para archivos multi-episodio",
     "HeaderSupportTheTeam": "Apoye al equipo de Emby",
@@ -688,7 +688,7 @@
     "NotificationOptionNewLibraryContent": "Nuevo contenido a\u00f1adido",
     "NotificationOptionNewLibraryContentMultiple": "Nuevo contenido a\u00f1adido (multiple)",
     "NotificationOptionCameraImageUploaded": "Imagen de camara se a carcado",
-    "NotificationOptionUserLockedOut": "User locked out",
+    "NotificationOptionUserLockedOut": "Usuario bloqueado",
     "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
     "NotificationOptionServerRestartRequired": "Se requiere el reinicio del servidor",
     "LabelNotificationEnabled": "Activar esta notificaci\u00f3n",
@@ -754,7 +754,7 @@
     "LabelProfileContainer": "Contenedor:",
     "LabelProfileVideoCodecs": "Codecs de video:",
     "LabelProfileAudioCodecs": "Codecs de audio:",
-    "LabelProfileCodecs": "Codecs:",
+    "LabelProfileCodecs": "C\u00f3decs:",
     "HeaderDirectPlayProfile": "Perfil de reproducci\u00f3n directa",
     "HeaderTranscodingProfile": "Perfil de transcodificaci\u00f3n",
     "HeaderCodecProfile": "Perfil de codec",
@@ -776,7 +776,7 @@
     "HeaderIdentification": "Identificaci\u00f3n",
     "TabDirectPlay": "Reproducci\u00f3n directa",
     "TabContainers": "Contenedores",
-    "TabCodecs": "Codecs",
+    "TabCodecs": "C\u00f3decs",
     "TabResponses": "Respuestas",
     "HeaderProfileInformation": "Informaci\u00f3n del perfil",
     "LabelEmbedAlbumArtDidl": "Incorporar la car\u00e1tula del \u00e1lbum en didl",
@@ -1145,14 +1145,14 @@
     "LabelDisplayFoldersView": "Display a folders view to show plain media folders",
     "ViewTypeLiveTvRecordingGroups": "Recordings",
     "ViewTypeLiveTvChannels": "Channels",
-    "LabelEasyPinCode": "Easy pin code:",
+    "LabelEasyPinCode": "F\u00e1cil c\u00f3digo PIN:",
     "EasyPasswordHelp": "Your easy pin code is used for offline access with supported Emby apps, and can also be used for easy in-network sign in.",
     "LabelInNetworkSignInWithEasyPassword": "Enable in-network sign in with my easy pin code",
     "LabelInNetworkSignInWithEasyPasswordHelp": "If enabled, you'll be able to use your easy pin code to sign in to Emby apps from inside your home network. Your regular password will only be needed away from home. If the pin code is left blank, you won't need a password within your home network.",
     "HeaderPassword": "Password",
     "HeaderLocalAccess": "Local Access",
     "HeaderViewOrder": "View Order",
-    "ButtonResetEasyPassword": "Reset easy pin code",
+    "ButtonResetEasyPassword": "Restablecer f\u00e1cil c\u00f3digo PIN",
     "LabelSelectUserViewOrder": "Choose the order your views will be displayed in within Emby apps",
     "LabelMetadataRefreshMode": "Metadata refresh mode:",
     "LabelImageRefreshMode": "Image refresh mode:",
@@ -1261,6 +1261,9 @@
     "ButtonLearnMoreAboutEmbyConnect": "Learn more about Emby Connect",
     "LabelExternalPlayers": "External players:",
     "LabelExternalPlayersHelp": "Display buttons to play content in external players. This is only available on devices that support url schemes, generally Android and iOS. With external players there is generally no support for remote control or resuming.",
+    "LabelNativeExternalPlayersHelp": "Display buttons to play content in external players.",
+    "LabelEnableItemPreviews": "Enable item previews",
+    "LabelEnableItemPreviewsHelp": "if enabled, sliding previews will appear when clicking items on certain screens.",
     "HeaderSubtitleProfile": "Subtitle Profile",
     "HeaderSubtitleProfiles": "Subtitle Profiles",
     "HeaderSubtitleProfilesHelp": "Subtitle profiles describe the subtitle formats supported by the device.",
@@ -1361,7 +1364,7 @@
     "HeaderForgotPassword": "Forgot Password",
     "TitleForgotPassword": "Forgot Password",
     "TitlePasswordReset": "Password Reset",
-    "LabelPasswordRecoveryPinCode": "Pin code:",
+    "LabelPasswordRecoveryPinCode": "C\u00f3digo PIN:",
     "HeaderPasswordReset": "Password Reset",
     "HeaderParentalRatings": "Parental Ratings",
     "HeaderVideoTypes": "Video Types",
@@ -1432,5 +1435,6 @@
     "HeaderExport": "Export",
     "HeaderColumns": "Columns",
     "ButtonReset": "Reset",
-    "OptionEnableExternalVideoPlayers": "Enable external video players"
+    "OptionEnableExternalVideoPlayers": "Enable external video players",
+    "ButtonUnlockGuide": "Unlock Guide"
 }
