--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1453,5 +1453,5 @@
     "ButtonReset": "Reset",
     "OptionEnableExternalVideoPlayers": "Enable external video players",
     "ButtonUnlockGuide": "Unlock Guide",
-    "LabelEnableFullScreen":  "Enable fullScreen mode"
+    "LabelEnableFullScreen":  "Enable fullscreen mode"
 }
