--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/da.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/da.json
@@ -766,5 +766,22 @@
     "ButtonRemote": "Fjernbetjening",
     "TabInfo": "Info",
     "TabCast": "Cast",
-    "TabScenes": "Scener"
+    "TabScenes": "Scener",
+    "HeaderUnlockApp": "Opl\u00e5s app",
+    "MessageUnlockAppWithPurchase": "L\u00e5s alle funktionerne i denne app op med en lille engangsbetaling.",
+    "MessageUnlockAppWithPurchaseOrSupporter": "L\u00e5s alle funktionerne i denne app op med en lille engangsbetaling eller ved at logge ind med et aktivt Emby Supporter medlemsskab.",
+    "MessageUnlockAppWithSupporter": "L\u00e5s alle funktionerne i denne app op ved at logge ind med et aktivt Emby Supporter medlemsskab.",
+    "MessageToValidateSupporter": "Hvis du har et aktivt Emby Supporter medlemsskab skal du blot logge ind i app'en mens du er p\u00e5 din Wifi forbindelse i dit eget hjem.",
+    "MessagePaymentServicesUnavailable": "Betalingsservicen er ikke tilg\u00e6ngelig p\u00e5 nuv\u00e6rende tidspunkt. Pr\u00f8v igen senere.",
+    "ButtonUnlockWithSupporter": "Log ind med et Emby Supporter medlemsskab",
+    "MessagePleaseSignInLocalNetwork": "F\u00f8r du forts\u00e6tter bedes du sikre dig at du har forbindelse til dit lokale netv\u00e6rk via Wifi eller Lan forbindelse.",
+    "ButtonUnlockWithPurchase": "L\u00e5s op gennem k\u00f8b",
+    "MessageLiveTvGuideRequiresUnlock": "Live TV Guiden er p\u00e5 nuv\u00e6rende tidspunkt begr\u00e6nset til {0} kanaler. Klik p\u00e5 \"L\u00e5s op\" knappen for at f\u00e5 mere at vide omkring hvordan du kan f\u00e5 den fulde oplevelse.",
+    "OptionEnableFullscreen": "Aktiver fuldsk\u00e6rm",
+    "ButtonServer": "Server",
+    "HeaderAdmin": "Admin",
+    "HeaderLibrary": "Bibliotek",
+    "HeaderMedia": "Medier",
+    "ButtonInbox": "Indbakke",
+    "HeaderAdvanced": "Avanceret"
 }
