--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -766,5 +766,22 @@
     "ButtonRemote": "Afstandsbediening",
     "TabInfo": "Info",
     "TabCast": "Cast",
-    "TabScenes": "Scenes"
+    "TabScenes": "Scenes",
+    "HeaderUnlockApp": "App vrijgeven",
+    "MessageUnlockAppWithPurchase": "Geef alle mogelijkheden van deze app vrij met een enkele kleine aankoop.",
+    "MessageUnlockAppWithPurchaseOrSupporter": "Geef alle mogelijkheden van deze app vrij met een enkele kleine aankoop of door met een actief Emby Supporter Lidmaatschap aan te melden.",
+    "MessageUnlockAppWithSupporter": "Geef alle mogelijkheden van deze app vrij door met een actief Emby Supporter Lidmaatschap aan te melden.",
+    "MessageToValidateSupporter": "Als je een actief Emby Supporter Lidmaatschap hebt, meld de app dan aan op je eigen wifi netwerk.",
+    "MessagePaymentServicesUnavailable": "Betaal services zijn momenteel niet beschikbaar, Probeer het later svp. nog eens.",
+    "ButtonUnlockWithSupporter": "Meld aan met je Emby Supporter Lidmaatschap",
+    "MessagePleaseSignInLocalNetwork": "Controleer of je verbonden bent met je lokale netwerk voordat je verder gaat.",
+    "ButtonUnlockWithPurchase": "Geef vrij met een aankoop",
+    "MessageLiveTvGuideRequiresUnlock": "De Live TV Gids is momenteel gelimiteerd tot {0} kanalen. Klik op de Geef vrij knop om te zien hoe je deze limiet op kan heffen.",
+    "OptionEnableFullscreen": "Schakel volledig scherm in",
+    "ButtonServer": "Server",
+    "HeaderAdmin": "Beheerder",
+    "HeaderLibrary": "Bibliotheek",
+    "HeaderMedia": "Media",
+    "ButtonInbox": "inbox",
+    "HeaderAdvanced": "Geavanceerd"
 }
