--- a/MediaBrowser.Server.Implementations/Localization/Server/cs.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/cs.json
@@ -1,13 +1,13 @@
 {
     "LabelExit": "Zav\u0159\u00edt",
     "LabelVisitCommunity": "Nav\u0161t\u00edvit komunitu",
-    "LabelGithub": "Github",
+    "LabelGithub": "GitHub",
     "LabelSwagger": "Swagger",
     "LabelStandard": "Standardn\u00ed",
-    "LabelApiDocumentation": "Api Documentation",
+    "LabelApiDocumentation": "Dokumentace API",
     "LabelDeveloperResources": "Developer Resources",
     "LabelBrowseLibrary": "Proch\u00e1zet knihovnu",
-    "LabelConfigureServer": "Configure Emby",
+    "LabelConfigureServer": "Konfigurovat Emby",
     "LabelOpenLibraryViewer": "Otev\u0159\u00edt knihovnu",
     "LabelRestartServer": "Restartovat server",
     "LabelShowLogWindow": "Zobrazit okno z\u00e1znam\u016f",
@@ -15,10 +15,10 @@
     "LabelFinish": "Dokon\u010dit",
     "LabelNext": "Dal\u0161\u00ed",
     "LabelYoureDone": "Hotovo!",
-    "WelcomeToProject": "Welcome to Emby!",
+    "WelcomeToProject": "V\u00edtejte v Emby!",
     "ThisWizardWillGuideYou": "Tento pr\u016fvodce V\u00e1m pom\u016f\u017ee proj\u00edt procesem nastaven\u00ed. Pro za\u010d\u00e1tek vyberte jazyk.",
     "TellUsAboutYourself": "\u0158ekn\u011bte n\u00e1m n\u011bco o sob\u011b",
-    "ButtonQuickStartGuide": "Quick start guide",
+    "ButtonQuickStartGuide": "Rychl\u00fd pr\u016fvodce",
     "LabelYourFirstName": "Va\u0161e k\u0159estn\u00ed jm\u00e9no:",
     "MoreUsersCanBeAddedLater": "Dal\u0161\u00ed u\u017eivatele m\u016f\u017eete p\u0159idat pozd\u011bji na n\u00e1st\u011bnce.",
     "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
@@ -34,34 +34,34 @@
     "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Povolit automatick\u00e9 mapov\u00e1n\u00ed port\u016f",
     "LabelEnableAutomaticPortMappingHelp": "UPnP umo\u017e\u0148uje automatick\u00e9 nastaven\u00ed routeru pro vzd\u00e1len\u00fd p\u0159\u00edstup. Nemus\u00ed fungovat s n\u011bkter\u00fdmi typy router\u016f.",
-    "HeaderTermsOfService": "Emby Terms of Service",
-    "MessagePleaseAcceptTermsOfService": "Please accept the terms of service and privacy policy before continuing.",
-    "OptionIAcceptTermsOfService": "I accept the terms of service",
-    "ButtonPrivacyPolicy": "Privacy policy",
-    "ButtonTermsOfService": "Terms of Service",
+    "HeaderTermsOfService": "Emby Podm\u00ednky slu\u017eby",
+    "MessagePleaseAcceptTermsOfService": "Ne\u017e budete pokra\u010dovat, p\u0159ijm\u011bte pros\u00edm podm\u00ednky slu\u017eby a z\u00e1sady ochrany osobn\u00edch \u00fadaj\u016f.",
+    "OptionIAcceptTermsOfService": "Souhlas\u00edm s podm\u00ednkami slu\u017eby",
+    "ButtonPrivacyPolicy": "Ochrana osobn\u00edch \u00fadaj\u016f",
+    "ButtonTermsOfService": "Podm\u00ednky slu\u017eby",
     "HeaderDeveloperOptions": "Developer Options",
-    "OptionEnableWebClientResponseCache": "Enable web client response caching",
+    "OptionEnableWebClientResponseCache": "Povolit ukl\u00e1d\u00e1n\u00ed do mezipam\u011bti webov\u00e9 odezvy klienta",
     "OptionDisableForDevelopmentHelp": "Configure these as needed for web client development purposes.",
     "OptionEnableWebClientResourceMinification": "Enable web client resource minification",
     "LabelDashboardSourcePath": "Web client source path:",
     "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
     "ButtonConvertMedia": "Convert media",
-    "ButtonOrganize": "Organize",
+    "ButtonOrganize": "Organizovat",
     "LinkedToEmbyConnect": "Linked to Emby Connect",
     "HeaderSupporterBenefits": "Supporter Benefits",
-    "HeaderAddUser": "Add User",
+    "HeaderAddUser": "P\u0159idat u\u017eivatele",
     "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
-    "LabelPinCode": "Pin code:",
-    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "LabelPinCode": "Pin k\u00f3d:",
+    "OptionHideWatchedContentFromLatestMedia": "Skr\u00fdt p\u0159ehr\u00e1n obsah ze seznamu naposledy p\u0159idan\u00fdch m\u00e9di\u00ed",
     "HeaderSync": "Sync",
     "ButtonOk": "Ok",
     "ButtonCancel": "Zru\u0161it",
-    "ButtonExit": "Exit",
+    "ButtonExit": "Zav\u0159\u00edt",
     "ButtonNew": "Nov\u00e9",
     "HeaderTV": "TV",
-    "HeaderAudio": "Audio",
+    "HeaderAudio": "Zvuk",
     "HeaderVideo": "Video",
-    "HeaderPaths": "Paths",
+    "HeaderPaths": "Cesty",
     "CategorySync": "Sync",
     "TabPlaylist": "Playlist",
     "HeaderEasyPinCode": "Easy Pin Code",
@@ -132,7 +132,7 @@
     "OptionEnableAccessToAllLibraries": "Enable access to all libraries",
     "DeviceAccessHelp": "This only applies to devices that can be uniquely identified and will not prevent browser access. Filtering user device access will prevent them from using new devices until they've been approved here.",
     "LabelDisplayMissingEpisodesWithinSeasons": "Zobrazit chyb\u011bj\u00edc\u00ed epizody",
-    "LabelUnairedMissingEpisodesWithinSeasons": "Zobrazit neprov\u011btran\u00e9 epizody v r\u00e1mci sez\u00f3n",
+    "LabelUnairedMissingEpisodesWithinSeasons": "Zobrazit neodvys\u00edlan\u00e9 epizody v r\u00e1mci sez\u00f3n",
     "HeaderVideoPlaybackSettings": "Nastaven\u00ed p\u0159ehr\u00e1v\u00e1n\u00ed videa",
     "HeaderPlaybackSettings": "Playback Settings",
     "LabelAudioLanguagePreference": "Up\u0159ednost\u0148ovan\u00fd jazyk videa:",
@@ -499,7 +499,7 @@
     "ButtonAddPathSubstitution": "P\u0159idat p\u0159emapov\u00e1n\u00ed",
     "OptionSpecialEpisode": "Speci\u00e1ln\u00ed",
     "OptionMissingEpisode": "Chyb\u011bj\u00edc\u00ed episody",
-    "OptionUnairedEpisode": "Neprov\u011btran\u00e9 epizody",
+    "OptionUnairedEpisode": "Neodvys\u00edlan\u00e9 epizody",
     "OptionEpisodeSortName": "Se\u0159azen\u00ed n\u00e1zvu epizod",
     "OptionSeriesSortName": "Jm\u00e9no serie",
     "OptionTvdbRating": "Tvdb hodnocen\u00ed",
@@ -736,7 +736,7 @@
     "ButtonPause": "Pause",
     "ButtonNext": "Next",
     "ButtonPrevious": "Previous",
-    "LabelGroupMoviesIntoCollections": "Group movies into collections",
+    "LabelGroupMoviesIntoCollections": "Zoskupit filmy do kolekc\u00ed.",
     "LabelGroupMoviesIntoCollectionsHelp": "When displaying movie lists, movies belonging to a collection will be displayed as one grouped item.",
     "NotificationOptionPluginError": "Plugin failure",
     "ButtonVolumeUp": "Volume up",
@@ -1261,6 +1261,9 @@
     "ButtonLearnMoreAboutEmbyConnect": "Learn more about Emby Connect",
     "LabelExternalPlayers": "External players:",
     "LabelExternalPlayersHelp": "Display buttons to play content in external players. This is only available on devices that support url schemes, generally Android and iOS. With external players there is generally no support for remote control or resuming.",
+    "LabelNativeExternalPlayersHelp": "Display buttons to play content in external players.",
+    "LabelEnableItemPreviews": "Enable item previews",
+    "LabelEnableItemPreviewsHelp": "if enabled, sliding previews will appear when clicking items on certain screens.",
     "HeaderSubtitleProfile": "Subtitle Profile",
     "HeaderSubtitleProfiles": "Subtitle Profiles",
     "HeaderSubtitleProfilesHelp": "Subtitle profiles describe the subtitle formats supported by the device.",
@@ -1432,5 +1435,6 @@
     "HeaderExport": "Export",
     "HeaderColumns": "Columns",
     "ButtonReset": "Reset",
-    "OptionEnableExternalVideoPlayers": "Enable external video players"
+    "OptionEnableExternalVideoPlayers": "Enable external video players",
+    "ButtonUnlockGuide": "Unlock Guide"
 }
