--- a/MediaBrowser.Server.Implementations/Localization/Server/da.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/da.json
@@ -1261,6 +1261,9 @@
     "ButtonLearnMoreAboutEmbyConnect": "L\u00e6r mere om Emby Connect",
     "LabelExternalPlayers": "Eksterne afspillere:",
     "LabelExternalPlayersHelp": "Vis knapper til afspilning af indhold i eksterne afspillere. Dette er kun tilg\u00e6ngeligt p\u00e5 enheder der underst\u00f8tter URL skemaer, almindeligvis Android og iOS. Med eksterne afspillere er der generelt gen underst\u00f8ttelse for fjernstyring eller forts\u00e6ttelse.",
+    "LabelNativeExternalPlayersHelp": "Hvis knapper til at afspille indhold i eksterne afspillere.",
+    "LabelEnableItemPreviews": "Aktiver forh\u00e5ndsvisning af elementer",
+    "LabelEnableItemPreviewsHelp": "Hvis aktiveret vil der blive vist glidende forh\u00e5ndsvisninger n\u00e5r der klikkes p\u00e5 elementer p\u00e5 visse sk\u00e6rme.",
     "HeaderSubtitleProfile": "Undertekstprofil",
     "HeaderSubtitleProfiles": "Undertekstprofiler",
     "HeaderSubtitleProfilesHelp": "Undertekstprofiler beskriver hvilke undertekstformater der unders\u00f8ttes af enheden.",
@@ -1432,5 +1435,6 @@
     "HeaderExport": "Eksporter",
     "HeaderColumns": "S\u00f8jler",
     "ButtonReset": "Reset",
-    "OptionEnableExternalVideoPlayers": "Enable external video players"
+    "OptionEnableExternalVideoPlayers": "Aktiver eksterne afspillere",
+    "ButtonUnlockGuide": "Opl\u00e5s guide"
 }
